--- a/Chapter 8 - General Linear Model.ipynb
+++ b/Chapter 8 - General Linear Model.ipynb
@@ -512,7 +512,7 @@
     "    \n",
     "    yl = pm.Bernoulli('yl', p=theta, observed=df['Own_House'])\n",
     "\n",
-    "    trace_0 = pm.sample(1000, return_inferencedata=True)"
+    "    trace_0 = pm.sample(1000, cores=1, return_inferencedata=True)"
    ]
   },
   {
