--- a/Chapter 1 - Overview of Bayesian Approach.ipynb
+++ b/Chapter 1 - Overview of Bayesian Approach.ipynb
@@ -13,9 +13,11 @@
     "import random as rm\n",
     "import pymc\n",
     "import arviz as az\n",
-    "plt.style.use('fivethirtyeight')\n",
+    "\n",
+    "plt.style.use(\"fivethirtyeight\")\n",
     "\n",
     "import warnings\n",
+    "\n",
     "warnings.filterwarnings(\"ignore\")"
    ]
   },
@@ -312,11 +314,11 @@
     "y_beta_posterior = sp.stats.beta(a=8, b=13).pdf(x_beta)\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(6, 6))\n",
-    "ax.plot(x_beta, y_beta_prior, label='prior')\n",
-    "ax.fill_between(x_beta, y_beta_prior, alpha=.5)\n",
-    "ax.plot(x_beta, y_beta_posterior, label='posterior')\n",
-    "ax.fill_between(x_beta, y_beta_posterior, alpha=.5)\n",
-    "ax.set_title('Beta-Bernoulli Conjugate')\n",
+    "ax.plot(x_beta, y_beta_prior, label=\"prior\")\n",
+    "ax.fill_between(x_beta, y_beta_prior, alpha=0.5)\n",
+    "ax.plot(x_beta, y_beta_posterior, label=\"posterior\")\n",
+    "ax.fill_between(x_beta, y_beta_posterior, alpha=0.5)\n",
+    "ax.set_title(\"Beta-Bernoulli Conjugate\")\n",
     "ax.legend()\n",
     "plt.show()"
    ]
@@ -349,22 +351,29 @@
     "    plt.figure(figsize=(16, 7))\n",
     "    for i, N in enumerate(number_of_trials):\n",
     "        heads = np.sum(sp.stats.bernoulli.rvs(p=fairness, size=N))\n",
-    "        ax = plt.subplot(int(len(number_of_trials)/3), 3, i + 1)\n",
-    "        ax.set_title('{} trials, {} heads'.format(N, heads))\n",
+    "        ax = plt.subplot(int(len(number_of_trials) / 3), 3, i + 1)\n",
+    "        ax.set_title(\"{} trials, {} heads\".format(N, heads))\n",
     "\n",
-    "        plt.xlabel('$P(H)$, Probability of Heads')\n",
-    "        plt.ylabel('Density')\n",
+    "        plt.xlabel(\"$P(H)$, Probability of Heads\")\n",
+    "        plt.ylabel(\"Density\")\n",
     "        if i == 0:\n",
     "            plt.ylim([0.0, 2.0])\n",
     "        plt.setp(ax.get_yticklabels(), visible=False)\n",
     "\n",
-    "        y = sp.stats.beta.pdf(x, heads + a_prior, N - heads + b_prior) # post_a = sum of heads + 1,  post_b = times - sum of heads + 1\n",
-    "        plt.plot(x, y, label=\"observe %d tosses,\\n %d heads\" % (N, heads), color='orange')\n",
+    "        y = sp.stats.beta.pdf(\n",
+    "            x, heads + a_prior, N - heads + b_prior\n",
+    "        )  # post_a = sum of heads + 1,  post_b = times - sum of heads + 1\n",
+    "        plt.plot(\n",
+    "            x, y, label=\"observe %d tosses,\\n %d heads\" % (N, heads), color=\"orange\"\n",
+    "        )\n",
     "        plt.fill_between(x, 0, y, color=\"tomato\", alpha=0.7)\n",
-    "    plt.suptitle(r'Hyperparameters: $\\alpha_0={},\\beta_0={}$, Likelihood parameter p={}'\\\n",
-    "                 .format(a_prior, b_prior, fairness),\\\n",
-    "                 size=23)\n",
-    "    plt.tight_layout(pad=.6)\n",
+    "    plt.suptitle(\n",
+    "        r\"Hyperparameters: $\\alpha_0={},\\beta_0={}$, Likelihood parameter p={}\".format(\n",
+    "            a_prior, b_prior, fairness\n",
+    "        ),\n",
+    "        size=23,\n",
+    "    )\n",
+    "    plt.tight_layout(pad=0.6)\n",
     "    plt.show()"
    ]
   },
@@ -385,7 +394,7 @@
     }
    ],
    "source": [
-    "plot_coins_with_prior(a_prior=1, b_prior=3, fairness=.7)"
+    "plot_coins_with_prior(a_prior=1, b_prior=3, fairness=0.7)"
    ]
   },
   {
@@ -422,10 +431,10 @@
    ],
    "source": [
     "a, b = 8, 13\n",
-    "mean_post = a/(a+b)\n",
-    "std_post =  (a*b)/((a+b)**2*(a+b+1))\n",
-    "print('mean of posterior: {}'.format(mean_post))\n",
-    "print('std of posterior: {}'.format(std_post))"
+    "mean_post = a / (a + b)\n",
+    "std_post = (a * b) / ((a + b) ** 2 * (a + b + 1))\n",
+    "print(\"mean of posterior: {}\".format(mean_post))\n",
+    "print(\"std of posterior: {}\".format(std_post))"
    ]
   },
   {
@@ -456,8 +465,8 @@
     }
    ],
    "source": [
-    "lb = sp.stats.beta(a=8, b=13).ppf(.025)\n",
-    "ub = sp.stats.beta(a=8, b=13).ppf(.975)\n",
+    "lb = sp.stats.beta(a=8, b=13).ppf(0.025)\n",
+    "ub = sp.stats.beta(a=8, b=13).ppf(0.975)\n",
     "x_ci = np.linspace(lb, ub, 100)\n",
     "y_ci = sp.stats.beta(a=8, b=13).pdf(x_ci)\n",
     "\n",
@@ -465,10 +474,10 @@
     "y_beta_posterior = sp.stats.beta(a=8, b=13).pdf(x_beta)\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(6, 6))\n",
-    "ax.plot(x_beta, y_beta_posterior, color='orange')\n",
-    "ax.fill_between(x_ci, y_ci, color='tomato', alpha=.5)\n",
+    "ax.plot(x_beta, y_beta_posterior, color=\"orange\")\n",
+    "ax.fill_between(x_ci, y_ci, color=\"tomato\", alpha=0.5)\n",
     "\n",
-    "ax.set_title('Bayesian Credible Interval')\n",
+    "ax.set_title(\"Bayesian Credible Interval\")\n",
     "plt.show()"
    ]
   },
@@ -520,9 +529,9 @@
     "def posterior_grid_coins(grid_points, heads, tosses, alpha, beta):\n",
     "    grid = np.linspace(0, 1, grid_points)\n",
     "    prior = sp.stats.beta(a=alpha, b=beta).pdf(grid)\n",
-    "    prior = prior/np.sum(prior)\n",
+    "    prior = prior / np.sum(prior)\n",
     "    likelihood = sp.stats.binom.pmf(heads, tosses, grid)\n",
-    "    posterior = (likelihood * prior)/np.sum(likelihood * prior) # normalize the unit\n",
+    "    posterior = (likelihood * prior) / np.sum(likelihood * prior)  # normalize the unit\n",
     "    return grid, prior, posterior"
    ]
   },
@@ -554,11 +563,11 @@
    ],
    "source": [
     "fig, ax = plt.subplots(figsize=(5, 5))\n",
-    "ax.plot(grid, prior, label=r'prior: Beta $\\alpha={}$, $\\beta={}$'.format(alpha, beta))\n",
-    "ax.fill_between(grid, prior, color='lightblue', alpha=.8)\n",
+    "ax.plot(grid, prior, label=r\"prior: Beta $\\alpha={}$, $\\beta={}$\".format(alpha, beta))\n",
+    "ax.fill_between(grid, prior, color=\"lightblue\", alpha=0.8)\n",
     "\n",
-    "ax.plot(grid, posterior, label ='posterior')\n",
-    "ax.fill_between(grid, posterior, color='tomato', alpha=.5)\n",
+    "ax.plot(grid, posterior, label=\"posterior\")\n",
+    "ax.fill_between(grid, posterior, color=\"tomato\", alpha=0.5)\n",
     "ax.legend()\n",
     "plt.show()"
    ]
@@ -721,30 +730,32 @@
     }
    ],
    "source": [
-    "coin_data = sp.stats.bernoulli(p=.1).rvs(size=20)\n",
+    "coin_data = sp.stats.bernoulli(p=0.1).rvs(size=20)\n",
     "head = coin_data.sum()\n",
     "tail = len(coin_data) - head\n",
     "\n",
     "alpha_0, beta_0 = 3, 6\n",
     "with pymc.Model() as normal_approximation:\n",
-    "    p = pymc.Beta('p', alpha_0, beta_0)\n",
-    "    w = pymc.Binomial('w',n=1, p=p, observed=coin_data)\n",
+    "    p = pymc.Beta(\"p\", alpha_0, beta_0)\n",
+    "    w = pymc.Binomial(\"w\", n=1, p=p, observed=coin_data)\n",
     "    mean_q = pymc.find_MAP()\n",
-    "    std_q = ((1/pymc.find_hessian(mean_q, vars=[p]))**0.5)[0]\n",
-    "MAP, sig = mean_q['p'], std_q\n",
+    "    std_q = ((1 / pymc.find_hessian(mean_q, vars=[p])) ** 0.5)[0]\n",
+    "MAP, sig = mean_q[\"p\"], std_q\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(12, 5))\n",
     "# Use analytical posterior conjugacy\n",
     "x = np.linspace(0, 1, 100)\n",
-    "ax.plot(x, sp.stats.beta(a=head+alpha_0, b=tail+beta_0).pdf(x), label='True posterior') \n",
-    " \n",
+    "ax.plot(\n",
+    "    x, sp.stats.beta(a=head + alpha_0, b=tail + beta_0).pdf(x), label=\"True posterior\"\n",
+    ")\n",
+    "\n",
     "# laplace approximation\n",
-    "ax.plot(x, sp.stats.norm(loc=MAP, scale=sig).pdf(x),label='Quadratic approximation')\n",
-    "ax.axvline(x=MAP, label='MAP', color='orange')\n",
+    "ax.plot(x, sp.stats.norm(loc=MAP, scale=sig).pdf(x), label=\"Quadratic approximation\")\n",
+    "ax.axvline(x=MAP, label=\"MAP\", color=\"orange\")\n",
     "ax.legend(loc=0, fontsize=13)\n",
-    " \n",
-    "ax.set_title('heads = {}, tails = {}'.format(head, tail))\n",
-    "ax.set_xlabel(r'$\\theta$', fontsize=14)\n",
+    "\n",
+    "ax.set_title(\"heads = {}, tails = {}\".format(head, tail))\n",
+    "ax.set_xlabel(r\"$\\theta$\", fontsize=14)\n",
     "plt.show()"
    ]
   },
@@ -794,12 +805,14 @@
    "source": [
     "def metropolis(function, steps):\n",
     "    sample = np.zeros(steps)\n",
-    "    old_x = .1 # [0, 1], if we use beta distribution\n",
-    "    old_prob = function.pdf(old_x) # calculate probability \n",
+    "    old_x = 0.1  # [0, 1], if we use beta distribution\n",
+    "    old_prob = function.pdf(old_x)  # calculate probability\n",
     "    for i in range(steps):\n",
-    "        new_x = old_x + np.random.normal(0, 1) # give the previous value a disturbance, we use Gaussian\n",
-    "        new_prob = function.pdf(new_x) # update the probability\n",
-    "        acceptance = new_prob/old_prob # this is the acceptance rule\n",
+    "        new_x = old_x + np.random.normal(\n",
+    "            0, 1\n",
+    "        )  # give the previous value a disturbance, we use Gaussian\n",
+    "        new_prob = function.pdf(new_x)  # update the probability\n",
+    "        acceptance = new_prob / old_prob  # this is the acceptance rule\n",
     "        if acceptance >= np.random.random():\n",
     "            sample[i] = new_x\n",
     "            old_x = new_x\n",
@@ -840,9 +853,9 @@
    ],
    "source": [
     "fig, ax = plt.subplots(figsize=(10, 10), ncols=1, nrows=2)\n",
-    "ax[0].hist(samples, bins=100, density=True, histtype='step', lw=2.5)\n",
+    "ax[0].hist(samples, bins=100, density=True, histtype=\"step\", lw=2.5)\n",
     "ax[0].plot(np.linspace(0, 1), pdf_curve)\n",
-    "ax[1].plot(samples, lw=.5)\n",
+    "ax[1].plot(samples, lw=0.5)\n",
     "plt.show()"
    ]
   },
