--- a/Chapter 2 -  Bayesian Conjugates.ipynb
+++ b/Chapter 2 -  Bayesian Conjugates.ipynb
@@ -11,7 +11,8 @@
     "import scipy as sp\n",
     "import scipy.stats\n",
     "import matplotlib.pyplot as plt\n",
-    "plt.style.use('fivethirtyeight')"
+    "\n",
+    "plt.style.use(\"fivethirtyeight\")"
    ]
   },
   {
@@ -91,18 +92,19 @@
     "fig = plt.figure(figsize=(9, 9))\n",
     "ax = fig.add_subplot(111)\n",
     "\n",
-    "params = np.array([[[.5,.5]],\n",
-    "                  [[5,1.3]],\n",
-    "                  [[1,5]],\n",
-    "                  [[2,2]],\n",
-    "                  [[2,3]],\n",
-    "                  [[3,2]],\n",
-    "                  [[1,1]]])\n",
+    "params = np.array(\n",
+    "    [[[0.5, 0.5]], [[5, 1.3]], [[1, 5]], [[2, 2]], [[2, 3]], [[3, 2]], [[1, 1]]]\n",
+    ")\n",
     "for i in range(params.shape[0]):\n",
     "    beta_pdf = sp.stats.beta.pdf(x, params[i][0][0], params[i][0][1])\n",
-    "    ax.plot(x, beta_pdf, lw = 3, label = '$a = %.1f, b =  %.1f$' % (params[i][0][0], params[i][0][1]))\n",
+    "    ax.plot(\n",
+    "        x,\n",
+    "        beta_pdf,\n",
+    "        lw=3,\n",
+    "        label=\"$a = %.1f, b =  %.1f$\" % (params[i][0][0], params[i][0][1]),\n",
+    "    )\n",
     "    ax.legend()\n",
-    "ax.set_title('Beta Distribution')\n",
+    "ax.set_title(\"Beta Distribution\")\n",
     "\n",
     "ax.axis([0, 1, 0, 3])\n",
     "plt.show()"
@@ -244,11 +246,13 @@
    ],
    "source": [
     "x = np.linspace(0, 1, 100)\n",
-    "params = [.5, .5]\n",
+    "params = [0.5, 0.5]\n",
     "beta_pdf = sp.stats.beta.pdf(x, params[0], params[1])\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(9, 9))\n",
-    "ax.plot(x, beta_pdf, lw = 3, label = r'$\\alpha = %.1f, \\beta =  %.1f$' % (params[0], params[1]))\n",
+    "ax.plot(\n",
+    "    x, beta_pdf, lw=3, label=r\"$\\alpha = %.1f, \\beta =  %.1f$\" % (params[0], params[1])\n",
+    ")\n",
     "ax.legend()\n",
     "\n",
     "ax.axis([0, 1, 0, 3])\n",
@@ -288,14 +292,24 @@
    ],
    "source": [
     "x = np.linspace(0, 1, 100)\n",
-    "params_prior = [.5, .5]\n",
+    "params_prior = [0.5, 0.5]\n",
     "params_post = [2.5, 12.5]\n",
     "beta_prior = sp.stats.beta.pdf(x, params_prior[0], params_prior[1])\n",
     "beta_post = sp.stats.beta.pdf(x, params_post[0], params_post[1])\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(9, 9))\n",
-    "ax.plot(x, beta_prior, lw = 3, label = r'$\\alpha_0 = %.1f, \\beta_0 =  %.1f$' % (params_prior[0], params_prior[1]))\n",
-    "ax.plot(x, beta_post, lw = 3, label = r'$\\alpha = %.1f, \\beta =  %.1f$' % (params_post[0], params_post[1]))\n",
+    "ax.plot(\n",
+    "    x,\n",
+    "    beta_prior,\n",
+    "    lw=3,\n",
+    "    label=r\"$\\alpha_0 = %.1f, \\beta_0 =  %.1f$\" % (params_prior[0], params_prior[1]),\n",
+    ")\n",
+    "ax.plot(\n",
+    "    x,\n",
+    "    beta_post,\n",
+    "    lw=3,\n",
+    "    label=r\"$\\alpha = %.1f, \\beta =  %.1f$\" % (params_post[0], params_post[1]),\n",
+    ")\n",
     "ax.legend()\n",
     "\n",
     "ax.axis([0, 1, 0, 5])\n",
@@ -339,8 +353,18 @@
     "beta_post = sp.stats.beta.pdf(x, params_post[0], params_post[1])\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(9, 9))\n",
-    "ax.plot(x, beta_prior, lw = 3, label = r'$\\alpha_0 = %.1f, \\beta_0 =  %.1f$' % (params_prior[0], params_prior[1]))\n",
-    "ax.plot(x, beta_post, lw = 3, label = r'$\\alpha = %.1f, \\beta =  %.1f$' % (params_post[0], params_post[1]))\n",
+    "ax.plot(\n",
+    "    x,\n",
+    "    beta_prior,\n",
+    "    lw=3,\n",
+    "    label=r\"$\\alpha_0 = %.1f, \\beta_0 =  %.1f$\" % (params_prior[0], params_prior[1]),\n",
+    ")\n",
+    "ax.plot(\n",
+    "    x,\n",
+    "    beta_post,\n",
+    "    lw=3,\n",
+    "    label=r\"$\\alpha = %.1f, \\beta =  %.1f$\" % (params_post[0], params_post[1]),\n",
+    ")\n",
     "ax.legend()\n",
     "\n",
     "ax.axis([0, 1, 0, 6])\n",
@@ -387,9 +411,11 @@
     "beta_pdf = sp.stats.beta.pdf(x, params[0], params[1])\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(9, 9))\n",
-    "ax.plot(x, beta_pdf, lw = 3, label = r'$\\alpha = %.1f, \\beta =  %.1f$' % (params[0], params[1]))\n",
-    "ax.axvline(.88, color='r',ls='--',label='mean: .88')\n",
-    "ax.axvline(.91, color='tomato',ls='--',label='mode: .91')\n",
+    "ax.plot(\n",
+    "    x, beta_pdf, lw=3, label=r\"$\\alpha = %.1f, \\beta =  %.1f$\" % (params[0], params[1])\n",
+    ")\n",
+    "ax.axvline(0.88, color=\"r\", ls=\"--\", label=\"mean: .88\")\n",
+    "ax.axvline(0.91, color=\"tomato\", ls=\"--\", label=\"mode: .91\")\n",
     "ax.axis([0, 1, 0, 7])\n",
     "ax.legend()\n",
     "plt.show()"
@@ -437,15 +463,17 @@
     "\n",
     "fig = plt.figure(figsize=(9, 9))\n",
     "ax = fig.add_subplot(111)\n",
-    "params = np.array([[[5,1.3]],\n",
-    "                  [[2,3]],\n",
-    "                  [[7.5,1]],\n",
-    "                  [[3,2]]])\n",
+    "params = np.array([[[5, 1.3]], [[2, 3]], [[7.5, 1]], [[3, 2]]])\n",
     "for i in range(params.shape[0]):\n",
     "    gamma_pdf = sp.stats.gamma.pdf(x, params[i][0][0], params[i][0][1])\n",
-    "    ax.plot(x, gamma_pdf, lw = 3, label = r'$\\alpha = %.1f, \\beta =  %.1f$' % (params[i][0][0], params[i][0][1]))\n",
+    "    ax.plot(\n",
+    "        x,\n",
+    "        gamma_pdf,\n",
+    "        lw=3,\n",
+    "        label=r\"$\\alpha = %.1f, \\beta =  %.1f$\" % (params[i][0][0], params[i][0][1]),\n",
+    "    )\n",
     "    ax.legend()\n",
-    "ax.set_title('Gamma Distribution')\n",
+    "ax.set_title(\"Gamma Distribution\")\n",
     "\n",
     "plt.show()"
    ]
@@ -592,15 +620,17 @@
    "source": [
     "x = np.linspace(0, 10, 100)\n",
     "params = [10, 2]\n",
-    "gamma_pdf = sp.stats.gamma.pdf(x, a=params[0], scale=1/params[1])\n",
+    "gamma_pdf = sp.stats.gamma.pdf(x, a=params[0], scale=1 / params[1])\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(9, 9))\n",
-    "ax.plot(x, gamma_pdf, lw = 3, label = r'$\\alpha = %.1f, \\beta =  %.1f$' % (params[0], params[1]))\n",
+    "ax.plot(\n",
+    "    x, gamma_pdf, lw=3, label=r\"$\\alpha = %.1f, \\beta =  %.1f$\" % (params[0], params[1])\n",
+    ")\n",
     "\n",
-    "mean = params[0]/params[1]\n",
-    "mode = (params[0]-1)/params[1]\n",
-    "ax.axvline(mean, color = 'tomato', ls='--', label='mean: {}'.format(mean))\n",
-    "ax.axvline(mode, color = 'red', ls='--', label='mode: {}'.format(mode))\n",
+    "mean = params[0] / params[1]\n",
+    "mode = (params[0] - 1) / params[1]\n",
+    "ax.axvline(mean, color=\"tomato\", ls=\"--\", label=\"mean: {}\".format(mean))\n",
+    "ax.axvline(mode, color=\"red\", ls=\"--\", label=\"mode: {}\".format(mode))\n",
     "ax.legend()\n",
     "plt.show()"
    ]
@@ -638,12 +668,22 @@
     "x = np.linspace(0, 10, 100)\n",
     "params_prior = [10, 2]\n",
     "params_post = [39, 12]\n",
-    "gamma_pdf_prior = sp.stats.gamma.pdf(x, a=params_prior[0], scale=1/params_prior[1])\n",
-    "gamma_pdf_post = sp.stats.gamma.pdf(x, a=params_post[0], scale=1/params_post[1])\n",
+    "gamma_pdf_prior = sp.stats.gamma.pdf(x, a=params_prior[0], scale=1 / params_prior[1])\n",
+    "gamma_pdf_post = sp.stats.gamma.pdf(x, a=params_post[0], scale=1 / params_post[1])\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(9, 9))\n",
-    "ax.plot(x, gamma_pdf_prior, lw = 3, label = r'$\\alpha_0 = %.1f, \\beta_0 =  %.1f$' % (params_prior[0], params_prior[1]))\n",
-    "ax.plot(x, gamma_pdf_post, lw = 3, label = r'$\\alpha = %.1f, \\beta =  %.1f$' % (params_post[0], params_post[1]))\n",
+    "ax.plot(\n",
+    "    x,\n",
+    "    gamma_pdf_prior,\n",
+    "    lw=3,\n",
+    "    label=r\"$\\alpha_0 = %.1f, \\beta_0 =  %.1f$\" % (params_prior[0], params_prior[1]),\n",
+    ")\n",
+    "ax.plot(\n",
+    "    x,\n",
+    "    gamma_pdf_post,\n",
+    "    lw=3,\n",
+    "    label=r\"$\\alpha = %.1f, \\beta =  %.1f$\" % (params_post[0], params_post[1]),\n",
+    ")\n",
     "\n",
     "ax.legend()\n",
     "plt.show()"
@@ -682,12 +722,22 @@
     "x = np.linspace(0, 10, 100)\n",
     "params_prior = [39, 12]\n",
     "params_post = [48, 17]\n",
-    "gamma_pdf_prior = sp.stats.gamma.pdf(x, a=params_prior[0], scale=1/params_prior[1])\n",
-    "gamma_pdf_post = sp.stats.gamma.pdf(x, a=params_post[0], scale=1/params_post[1])\n",
+    "gamma_pdf_prior = sp.stats.gamma.pdf(x, a=params_prior[0], scale=1 / params_prior[1])\n",
+    "gamma_pdf_post = sp.stats.gamma.pdf(x, a=params_post[0], scale=1 / params_post[1])\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(9, 9))\n",
-    "ax.plot(x, gamma_pdf_prior, lw = 3, label = r'$\\alpha_0 = %.1f, \\beta_0 =  %.1f$' % (params_prior[0], params_prior[1]))\n",
-    "ax.plot(x, gamma_pdf_post, lw = 3, label = r'$\\alpha = %.1f, \\beta =  %.1f$' % (params_post[0], params_post[1]))\n",
+    "ax.plot(\n",
+    "    x,\n",
+    "    gamma_pdf_prior,\n",
+    "    lw=3,\n",
+    "    label=r\"$\\alpha_0 = %.1f, \\beta_0 =  %.1f$\" % (params_prior[0], params_prior[1]),\n",
+    ")\n",
+    "ax.plot(\n",
+    "    x,\n",
+    "    gamma_pdf_post,\n",
+    "    lw=3,\n",
+    "    label=r\"$\\alpha = %.1f, \\beta =  %.1f$\" % (params_post[0], params_post[1]),\n",
+    ")\n",
     "\n",
     "ax.legend()\n",
     "plt.show()"
