--- a/Chapter 2 - Statistical Properties of OLS.ipynb
+++ b/Chapter 2 - Statistical Properties of OLS.ipynb
@@ -23,9 +23,10 @@
     "import statsmodels.api as sm\n",
     "\n",
     "from sympy import init_printing\n",
-    "init_printing() \n",
     "\n",
-    "plt.style.use('ggplot')"
+    "init_printing()\n",
+    "\n",
+    "plt.style.use(\"ggplot\")"
    ]
   },
   {
@@ -238,15 +239,15 @@
     "\n",
     "    X_inde = np.random.randn(3, i)\n",
     "    X = np.concatenate((const.T, X_inde.T), axis=1)\n",
-    "    \n",
+    "\n",
     "    beta_hat = []\n",
     "    for j in range(re_draw):\n",
     "        u = np.random.randn(i)\n",
     "        u = u[np.newaxis, :].T\n",
-    "        y = X@beta_array + u\n",
-    "        beta_hat.append(np.linalg.inv(X.T@X)@X.T@y)\n",
+    "        y = X @ beta_array + u\n",
+    "        beta_hat.append(np.linalg.inv(X.T @ X) @ X.T @ y)\n",
     "    beta_hat = np.array(beta_hat).T\n",
-    "    beta_hat_mean.append(np.mean(beta_hat[0], axis = 1))\n",
+    "    beta_hat_mean.append(np.mean(beta_hat[0], axis=1))\n",
     "\n",
     "beta0, beta1, beta2, beta3 = [], [], [], []\n",
     "for i in beta_hat_mean:\n",
@@ -273,23 +274,23 @@
     }
    ],
    "source": [
-    "fig, ax = plt.subplots(figsize =(18, 8), nrows = 2, ncols=2)\n",
-    "fig.suptitle('Simulation of OLS Consistency', size = 18)\n",
-    "ax[0,0].plot(beta0)\n",
-    "ax[0,0].axhline(2, color ='r')\n",
-    "ax[0,0].set_xlabel(r'$\\beta_1$ Sample Size')\n",
+    "fig, ax = plt.subplots(figsize=(18, 8), nrows=2, ncols=2)\n",
+    "fig.suptitle(\"Simulation of OLS Consistency\", size=18)\n",
+    "ax[0, 0].plot(beta0)\n",
+    "ax[0, 0].axhline(2, color=\"r\")\n",
+    "ax[0, 0].set_xlabel(r\"$\\beta_1$ Sample Size\")\n",
     "\n",
-    "ax[0,1].plot(beta1)\n",
-    "ax[0,1].axhline(3, color ='r')\n",
-    "ax[0,1].set_xlabel(r'$\\beta_2$ Sample Size')\n",
+    "ax[0, 1].plot(beta1)\n",
+    "ax[0, 1].axhline(3, color=\"r\")\n",
+    "ax[0, 1].set_xlabel(r\"$\\beta_2$ Sample Size\")\n",
     "\n",
-    "ax[1,0].plot(beta2)\n",
-    "ax[1,0].axhline(4, color ='r')\n",
-    "ax[1,0].set_xlabel(r'$\\beta_3$ Sample Size')\n",
+    "ax[1, 0].plot(beta2)\n",
+    "ax[1, 0].axhline(4, color=\"r\")\n",
+    "ax[1, 0].set_xlabel(r\"$\\beta_3$ Sample Size\")\n",
     "\n",
-    "ax[1,1].plot(beta3)\n",
-    "ax[1,1].axhline(5, color ='r')\n",
-    "ax[1,1].set_xlabel(r'$\\beta_4$ Sample Size')\n",
+    "ax[1, 1].plot(beta3)\n",
+    "ax[1, 1].axhline(5, color=\"r\")\n",
+    "ax[1, 1].set_xlabel(r\"$\\beta_4$ Sample Size\")\n",
     "plt.show()"
    ]
   },
@@ -370,7 +371,8 @@
     }
    ],
    "source": [
-    "B = sy.Matrix([[1, -1], [3, 4], [0, 2]]); B"
+    "B = sy.Matrix([[1, -1], [3, 4], [0, 2]])\n",
+    "B"
    ]
   },
   {
@@ -402,7 +404,7 @@
     }
    ],
    "source": [
-    "B.T*B"
+    "B.T * B"
    ]
   },
   {
@@ -438,7 +440,7 @@
     }
    ],
    "source": [
-    "B*B.T"
+    "B * B.T"
    ]
   },
   {
@@ -648,62 +650,64 @@
     }
    ],
    "source": [
-    "fig, ax = plt.subplots(figsize = (10, 10))\n",
+    "fig, ax = plt.subplots(figsize=(10, 10))\n",
     "\n",
     "basis = np.array([[0, 0, 5, 7], [0, 0, 9, 0]])\n",
     "X, Y, U, V = zip(*basis)\n",
-    "ax.quiver(X, Y, U, V, angles='xy', scale_units='xy', scale=1) \n",
+    "ax.quiver(X, Y, U, V, angles=\"xy\", scale_units=\"xy\", scale=1)\n",
     "\n",
     "M2x1 = np.array([[0, 0, 0, 7]])\n",
     "X, Y, U, V = zip(*M2x1)\n",
-    "ax.quiver(X, Y, U, V, angles='xy', scale_units='xy', scale=1, color = 'red') \n",
+    "ax.quiver(X, Y, U, V, angles=\"xy\", scale_units=\"xy\", scale=1, color=\"red\")\n",
     "\n",
     "x1_apos = np.array([[0, 0, 7, 5]])\n",
     "X, Y, U, V = zip(*x1_apos)\n",
-    "ax.quiver(X, Y, U, V, angles='xy', scale_units='xy', scale=1, color = 'gray') \n",
+    "ax.quiver(X, Y, U, V, angles=\"xy\", scale_units=\"xy\", scale=1, color=\"gray\")\n",
     "\n",
     "M2x1_apos = np.array([[0, 0, 0, 5]])\n",
     "X, Y, U, V = zip(*M2x1_apos)\n",
-    "ax.quiver(X, Y, U, V, angles='xy', scale_units='xy', scale=1, color = 'pink') \n",
+    "ax.quiver(X, Y, U, V, angles=\"xy\", scale_units=\"xy\", scale=1, color=\"pink\")\n",
     "\n",
     "X2c = np.array([[0, 0, 5, 0]])\n",
     "X, Y, U, V = zip(*X2c)\n",
-    "ax.quiver(X, Y, U, V, angles='xy', scale_units='xy', scale=1, color = 'aqua') \n",
+    "ax.quiver(X, Y, U, V, angles=\"xy\", scale_units=\"xy\", scale=1, color=\"aqua\")\n",
     "\n",
     "point1 = [7, 5]\n",
     "point2 = [0, 5]\n",
     "line = np.array([point1, point2])\n",
-    "ax.plot(line[:,0], line[:,1], c = 'k', lw = 3.5,alpha =0.5, ls = '--')\n",
+    "ax.plot(line[:, 0], line[:, 1], c=\"k\", lw=3.5, alpha=0.5, ls=\"--\")\n",
     "\n",
     "point1 = [5, 7]\n",
     "point2 = [0, 7]\n",
     "line = np.array([point1, point2])\n",
-    "ax.plot(line[:,0], line[:,1], c = 'k', lw = 3.5,alpha =0.5, ls = '--')\n",
+    "ax.plot(line[:, 0], line[:, 1], c=\"k\", lw=3.5, alpha=0.5, ls=\"--\")\n",
     "\n",
     "point1 = [5, 0]\n",
     "point2 = [5, 7]\n",
     "line = np.array([point1, point2])\n",
-    "ax.plot(line[:,0], line[:,1], c = 'aqua', lw = 3.5,alpha =0.5, ls = '--')\n",
+    "ax.plot(line[:, 0], line[:, 1], c=\"aqua\", lw=3.5, alpha=0.5, ls=\"--\")\n",
     "\n",
     "ax.set_xlim([-1, 10])\n",
     "ax.set_ylim([-1, 10])\n",
-    "#plt.draw()\n",
+    "# plt.draw()\n",
     "ax.grid()\n",
     "\n",
     "\n",
-    "ax.text(5, 7, r'$x_1$', size = 18)\n",
-    "ax.text(9, 0, r'$X_2$', size = 18)\n",
-    "ax.text(0, 7, r'$M_2 x_1$', size = 18)\n",
-    "ax.text(7, 5, r'$x_1^\\prime$', size = 18)\n",
-    "ax.text(0, 5, r'$M_2 x_1^\\prime$', size = 18)\n",
-    "ax.text(7, 7, r'$Var(\\hat{\\beta}_1)=\\frac{\\sigma_0^2}{\\|\\|M_2x_1\\|\\|^2}$', size = 18)\n",
-    "ax.text(.3, .1, r'$\\vartheta$', size = 22)\n",
-    "ax.text(5, 0.1, r'$X_2c$', size = 18)\n",
-    "ax.text(4.85, 3, r'$\\hat{u}$', size = 22)\n",
+    "ax.text(5, 7, r\"$x_1$\", size=18)\n",
+    "ax.text(9, 0, r\"$X_2$\", size=18)\n",
+    "ax.text(0, 7, r\"$M_2 x_1$\", size=18)\n",
+    "ax.text(7, 5, r\"$x_1^\\prime$\", size=18)\n",
+    "ax.text(0, 5, r\"$M_2 x_1^\\prime$\", size=18)\n",
+    "ax.text(7, 7, r\"$Var(\\hat{\\beta}_1)=\\frac{\\sigma_0^2}{\\|\\|M_2x_1\\|\\|^2}$\", size=18)\n",
+    "ax.text(0.3, 0.1, r\"$\\vartheta$\", size=22)\n",
+    "ax.text(5, 0.1, r\"$X_2c$\", size=18)\n",
+    "ax.text(4.85, 3, r\"$\\hat{u}$\", size=22)\n",
     "\n",
-    "style = 'Simple, tail_width=0.5, head_width=8, head_length=16'\n",
-    "kw = dict(arrowstyle=style, color='orange', ls = '-.', alpha = .5, lw = 3)\n",
-    "arrow = mpl.patches.FancyArrowPatch((9,2),(2,9), connectionstyle='arc3,rad=.35', **kw)\n",
+    "style = \"Simple, tail_width=0.5, head_width=8, head_length=16\"\n",
+    "kw = dict(arrowstyle=style, color=\"orange\", ls=\"-.\", alpha=0.5, lw=3)\n",
+    "arrow = mpl.patches.FancyArrowPatch(\n",
+    "    (9, 2), (2, 9), connectionstyle=\"arc3,rad=.35\", **kw\n",
+    ")\n",
     "ax.add_patch(arrow)\n",
     "\n",
     "plt.show()"
@@ -1158,8 +1162,8 @@
     }
    ],
    "source": [
-    "print('The moduduls of residual: {:.4f}'.format(np.linalg.norm(ols_obj.resid)))\n",
-    "print('The moduduls of disturbance term: {:.4f}'.format(np.linalg.norm(ols_obj.u)))"
+    "print(\"The moduduls of residual: {:.4f}\".format(np.linalg.norm(ols_obj.resid)))\n",
+    "print(\"The moduduls of disturbance term: {:.4f}\".format(np.linalg.norm(ols_obj.u)))"
    ]
   },
   {
@@ -1223,8 +1227,8 @@
    "source": [
     "for i in range(10000):\n",
     "    u = lr.gen_u(100)\n",
-    "    resid = proj_matM@u\n",
-    "    resid_array = np.concatenate((resid_array, resid), axis = 1)\n",
+    "    resid = proj_matM @ u\n",
+    "    resid_array = np.concatenate((resid_array, resid), axis=1)\n",
     "resid_array = resid_array[:, 1:]"
    ]
   },
@@ -1253,9 +1257,9 @@
    ],
    "source": [
     "fig, ax = plt.subplots(figsize=(10, 10))\n",
-    "ax.hist(np.var(resid_array, axis = 0), bins= 80)\n",
-    "ax.axvline(x = np.mean(np.var(resid_array, axis = 0)), color = 'blue')\n",
-    "ax.set_title('Variance Distribution of Sampled Residuals')\n",
+    "ax.hist(np.var(resid_array, axis=0), bins=80)\n",
+    "ax.axvline(x=np.mean(np.var(resid_array, axis=0)), color=\"blue\")\n",
+    "ax.set_title(\"Variance Distribution of Sampled Residuals\")\n",
     "plt.show()"
    ]
   },
