--- a/Chapter 4 - Markov Chain Monte Carlo.ipynb
+++ b/Chapter 4 - Markov Chain Monte Carlo.ipynb
@@ -14,7 +14,8 @@
     "import math as mt\n",
     "import scipy.special\n",
     "import seaborn as sns\n",
-    "plt.style.use('fivethirtyeight')\n",
+    "\n",
+    "plt.style.use(\"fivethirtyeight\")\n",
     "from statsmodels.graphics.tsaplots import plot_acf\n",
     "from matplotlib import cm\n",
     "import pandas as pd"
@@ -98,15 +99,17 @@
    "source": [
     "x = np.linspace(0, 10, 100)\n",
     "params = [10, 2]\n",
-    "gamma_pdf = sp.stats.gamma.pdf(x, a=params[0], scale=1/params[1])\n",
+    "gamma_pdf = sp.stats.gamma.pdf(x, a=params[0], scale=1 / params[1])\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(7, 7))\n",
-    "ax.plot(x, gamma_pdf, lw = 3, label = r'$\\alpha = %.1f, \\beta =  %.1f$' % (params[0], params[1]))\n",
-    "ax.set_title('Prior')\n",
-    "mean = params[0]/params[1]\n",
-    "mode = (params[0]-1)/params[1]\n",
-    "ax.axvline(mean, color = 'tomato', ls='--', label='mean: {}'.format(mean))\n",
-    "ax.axvline(mode, color = 'red', ls='--', label='mode: {}'.format(mode))\n",
+    "ax.plot(\n",
+    "    x, gamma_pdf, lw=3, label=r\"$\\alpha = %.1f, \\beta =  %.1f$\" % (params[0], params[1])\n",
+    ")\n",
+    "ax.set_title(\"Prior\")\n",
+    "mean = params[0] / params[1]\n",
+    "mode = (params[0] - 1) / params[1]\n",
+    "ax.axvline(mean, color=\"tomato\", ls=\"--\", label=\"mean: {}\".format(mean))\n",
+    "ax.axvline(mode, color=\"red\", ls=\"--\", label=\"mode: {}\".format(mode))\n",
     "ax.legend()\n",
     "plt.show()"
    ]
@@ -142,7 +145,7 @@
    "outputs": [],
    "source": [
     "def pois_lh(k, lamda):\n",
-    "    lh = lamda**k*np.exp(-lamda)/mt.factorial(k)\n",
+    "    lh = lamda**k * np.exp(-lamda) / mt.factorial(k)\n",
     "    return lh"
    ]
   },
@@ -166,7 +169,7 @@
    "source": [
     "lamda_init = 8\n",
     "k = 3\n",
-    "pois_lh(k = k, lamda = lamda_init)"
+    "pois_lh(k=k, lamda=lamda_init)"
    ]
   },
   {
@@ -188,7 +191,9 @@
    "outputs": [],
    "source": [
     "def gamma_prior(alpha, beta, lamda):\n",
-    "    prior = (beta**alpha*lamda**(alpha-1)*np.exp(-beta*lamda))/sp.special.gamma(alpha)\n",
+    "    prior = (\n",
+    "        beta**alpha * lamda ** (alpha - 1) * np.exp(-beta * lamda)\n",
+    "    ) / sp.special.gamma(alpha)\n",
     "    return prior"
    ]
   },
@@ -211,8 +216,8 @@
    ],
    "source": [
     "lamda_current = lamda_init\n",
-    "alpha=10\n",
-    "beta=2\n",
+    "alpha = 10\n",
+    "beta = 2\n",
     "gamma_prior(alpha=alpha, beta=beta, lamda=lamda_current)"
    ]
   },
@@ -242,8 +247,10 @@
     }
    ],
    "source": [
-    "k=3\n",
-    "posterior_current = pois_lh(k=k, lamda=lamda_current) * gamma_prior(alpha=10, beta=2, lamda=lamda_current)\n",
+    "k = 3\n",
+    "posterior_current = pois_lh(k=k, lamda=lamda_current) * gamma_prior(\n",
+    "    alpha=10, beta=2, lamda=lamda_current\n",
+    ")\n",
     "posterior_current"
    ]
   },
@@ -273,7 +280,7 @@
     }
    ],
    "source": [
-    "tuning_param = .5\n",
+    "tuning_param = 0.5\n",
     "lamda_prop = sp.stats.norm(loc=lamda_current, scale=tuning_param).rvs()\n",
     "lamda_prop"
    ]
@@ -304,7 +311,9 @@
     }
    ],
    "source": [
-    "posterior_prop = gamma_prior(alpha, beta, lamda=lamda_prop)*pois_lh(k, lamda=lamda_prop)\n",
+    "posterior_prop = gamma_prior(alpha, beta, lamda=lamda_prop) * pois_lh(\n",
+    "    k, lamda=lamda_prop\n",
+    ")\n",
     "posterior_prop"
    ]
   },
@@ -357,7 +366,7 @@
     }
    ],
    "source": [
-    "prob_threshold = np.min([posterior_prop/posterior_current, 1])\n",
+    "prob_threshold = np.min([posterior_prop / posterior_current, 1])\n",
     "prob_threshold"
    ]
   },
@@ -392,10 +401,10 @@
     }
    ],
    "source": [
-    "if sp.stats.uniform.rvs() > .768:\n",
-    "    print('stay with current lambda')\n",
+    "if sp.stats.uniform.rvs() > 0.768:\n",
+    "    print(\"stay with current lambda\")\n",
     "else:\n",
-    "    print('accept next lambda')"
+    "    print(\"accept next lambda\")"
    ]
   },
   {
@@ -429,7 +438,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def gamma_poisson_mcmc(lamda_init = 2, k = 3, alpha = 10, beta= 2, tuning_param = 1, chain_size = 10000): \n",
+    "def gamma_poisson_mcmc(\n",
+    "    lamda_init=2, k=3, alpha=10, beta=2, tuning_param=1, chain_size=10000\n",
+    "):\n",
     "    np.random.seed(123)\n",
     "    lamda_current = lamda_init\n",
     "\n",
@@ -438,16 +449,16 @@
     "    post_ratio_list = []\n",
     "\n",
     "    for i in range(chain_size):\n",
-    "        lh_current = pois_lh(k = k, lamda = lamda_current)\n",
+    "        lh_current = pois_lh(k=k, lamda=lamda_current)\n",
     "        prior_current = gamma_prior(alpha=alpha, beta=beta, lamda=lamda_current)\n",
-    "        posterior_current = lh_current*prior_current\n",
+    "        posterior_current = lh_current * prior_current\n",
     "\n",
     "        lamda_proposal = sp.stats.norm(loc=lamda_current, scale=tuning_param).rvs()\n",
     "        prior_next = gamma_prior(alpha=alpha, beta=beta, lamda=lamda_proposal)\n",
     "        lh_next = pois_lh(k, lamda=lamda_proposal)\n",
     "\n",
-    "        posterior_proposal = lh_next*prior_next\n",
-    "        post_ratio = posterior_proposal/posterior_current\n",
+    "        posterior_proposal = lh_next * prior_next\n",
+    "        post_ratio = posterior_proposal / posterior_current\n",
     "\n",
     "        prob_next = np.min([post_ratio, 1])\n",
     "        unif_draw = sp.stats.uniform.rvs()\n",
@@ -456,10 +467,10 @@
     "        if unif_draw < prob_next:\n",
     "            lamda_current = lamda_proposal\n",
     "            lamda_mcmc.append(lamda_current)\n",
-    "            pass_rate.append('Y')\n",
+    "            pass_rate.append(\"Y\")\n",
     "        else:\n",
     "            lamda_mcmc.append(lamda_current)\n",
-    "            pass_rate.append('N')\n",
+    "            pass_rate.append(\"N\")\n",
     "    return lamda_mcmc, pass_rate"
    ]
   },
@@ -478,7 +489,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lamda_mcmc, pass_rate = gamma_poisson_mcmc(chain_size = 10000) "
+    "lamda_mcmc, pass_rate = gamma_poisson_mcmc(chain_size=10000)"
    ]
   },
   {
@@ -488,12 +499,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "yes = ['Pass','Not Pass']\n",
-    "counts = [pass_rate.count('Y'), pass_rate.count('N')]\n",
+    "yes = [\"Pass\", \"Not Pass\"]\n",
+    "counts = [pass_rate.count(\"Y\"), pass_rate.count(\"N\")]\n",
     "\n",
     "x = np.linspace(0, 10, 100)\n",
     "params_prior = [10, 2]\n",
-    "gamma_pdf_prior = sp.stats.gamma.pdf(x, a=params_prior[0], scale=1/params_prior[1])"
+    "gamma_pdf_prior = sp.stats.gamma.pdf(x, a=params_prior[0], scale=1 / params_prior[1])"
    ]
   },
   {
@@ -517,7 +528,7 @@
    "outputs": [],
    "source": [
     "params_post = [13, 3]\n",
-    "gamma_pdf_post = sp.stats.gamma.pdf(x, a=params_post[0], scale=1/params_post[1])"
+    "gamma_pdf_post = sp.stats.gamma.pdf(x, a=params_post[0], scale=1 / params_post[1])"
    ]
   },
   {
@@ -548,15 +559,15 @@
     }
    ],
    "source": [
-    "fig, ax = plt.subplots(figsize = (12, 12), nrows = 3, ncols = 1)\n",
+    "fig, ax = plt.subplots(figsize=(12, 12), nrows=3, ncols=1)\n",
     "ax[0].hist(lamda_mcmc[1000::2], bins=100, density=True)\n",
-    "ax[0].set_title(r'Posterior Frequency Distribution of $\\lambda$')\n",
-    "ax[0].plot(x, gamma_pdf_prior, label='Prior')\n",
-    "ax[0].plot(x, gamma_pdf_post, label='Posterior')\n",
+    "ax[0].set_title(r\"Posterior Frequency Distribution of $\\lambda$\")\n",
+    "ax[0].plot(x, gamma_pdf_prior, label=\"Prior\")\n",
+    "ax[0].plot(x, gamma_pdf_post, label=\"Posterior\")\n",
     "ax[0].legend()\n",
     "ax[1].plot(np.arange(len(lamda_mcmc)), lamda_mcmc, lw=1)\n",
-    "ax[1].set_title('Trace')\n",
-    "ax[2].barh(yes, counts, color=['green', 'blue'], alpha=.7)\n",
+    "ax[1].set_title(\"Trace\")\n",
+    "ax[2].barh(yes, counts, color=[\"green\", \"blue\"], alpha=0.7)\n",
     "plt.show()"
    ]
   },
@@ -615,24 +626,36 @@
     "x_gamma = np.linspace(-3, 12, 100)\n",
     "x_norm = np.linspace(-3, 6, 100)\n",
     "params_gamma = [10, 2]\n",
-    "gamma_pdf = sp.stats.gamma.pdf(x, a=params_gamma[0], scale=1/params_gamma[1])\n",
+    "gamma_pdf = sp.stats.gamma.pdf(x, a=params_gamma[0], scale=1 / params_gamma[1])\n",
     "\n",
     "mu = 1\n",
     "sigma = 1\n",
     "normal_pdf = sp.stats.norm.pdf(x, loc=mu, scale=sigma)\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(14, 7))\n",
-    "ax.plot(x, gamma_pdf, lw = 3, label = r'Prior $\\alpha = %.1f, \\beta =  %.1f$' % (params[0], params[1]), color='#FF6B1A')\n",
-    "ax.plot(x, normal_pdf, lw = 3, label = r'Proposal $\\mu=%.1f , \\sigma= %.1f$' % (mu, sigma), color='#662400')\n",
-    "ax.text(4, .27, 'Gamma Prior', color ='#FF6B1A')\n",
-    "ax.text(1.7, .37, 'Normal Proposal', color ='#662400')\n",
-    "ax.text(.2, -.04, r'$\\lambda_{current}=1$', color ='tomato')\n",
+    "ax.plot(\n",
+    "    x,\n",
+    "    gamma_pdf,\n",
+    "    lw=3,\n",
+    "    label=r\"Prior $\\alpha = %.1f, \\beta =  %.1f$\" % (params[0], params[1]),\n",
+    "    color=\"#FF6B1A\",\n",
+    ")\n",
+    "ax.plot(\n",
+    "    x,\n",
+    "    normal_pdf,\n",
+    "    lw=3,\n",
+    "    label=r\"Proposal $\\mu=%.1f , \\sigma= %.1f$\" % (mu, sigma),\n",
+    "    color=\"#662400\",\n",
+    ")\n",
+    "ax.text(4, 0.27, \"Gamma Prior\", color=\"#FF6B1A\")\n",
+    "ax.text(1.7, 0.37, \"Normal Proposal\", color=\"#662400\")\n",
+    "ax.text(0.2, -0.04, r\"$\\lambda_{current}=1$\", color=\"tomato\")\n",
     "\n",
     "x_fill = np.linspace(-3, 0, 30)\n",
     "y_fill = sp.stats.norm.pdf(x_fill, loc=mu, scale=sigma)\n",
-    "ax.fill_between(x_fill, y_fill, color ='#B33F00')\n",
+    "ax.fill_between(x_fill, y_fill, color=\"#B33F00\")\n",
     "\n",
-    "ax.axvline(mu, color = 'red', ls='--', label=r'$\\mu=${}'.format(mu), alpha=.4)\n",
+    "ax.axvline(mu, color=\"red\", ls=\"--\", label=r\"$\\mu=${}\".format(mu), alpha=0.4)\n",
     "ax.legend()\n",
     "plt.show()"
    ]
@@ -656,7 +679,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def gamma_poisson_mcmc_1(lamda_init = 2, k = 3, alpha = 10, beta= 2, tuning_param = 1, chain_size = 10000): \n",
+    "def gamma_poisson_mcmc_1(\n",
+    "    lamda_init=2, k=3, alpha=10, beta=2, tuning_param=1, chain_size=10000\n",
+    "):\n",
     "    np.random.seed(123)\n",
     "    lamda_current = lamda_init\n",
     "\n",
@@ -665,9 +690,9 @@
     "    post_ratio_list = []\n",
     "\n",
     "    for i in range(chain_size):\n",
-    "        lh_current = pois_lh(k = k, lamda = lamda_current)\n",
+    "        lh_current = pois_lh(k=k, lamda=lamda_current)\n",
     "        prior_current = gamma_prior(alpha=alpha, beta=beta, lamda=lamda_current)\n",
-    "        posterior_current = lh_current*prior_current\n",
+    "        posterior_current = lh_current * prior_current\n",
     "\n",
     "        lamda_proposal = sp.stats.norm(loc=lamda_current, scale=tuning_param).rvs()\n",
     "        if lamda_proposal < 0:\n",
@@ -675,8 +700,8 @@
     "        prior_next = gamma_prior(alpha=alpha, beta=beta, lamda=lamda_proposal)\n",
     "        lh_next = pois_lh(k, lamda=lamda_proposal)\n",
     "\n",
-    "        posterior_proposal = lh_next*prior_next\n",
-    "        post_ratio = posterior_proposal/posterior_current\n",
+    "        posterior_proposal = lh_next * prior_next\n",
+    "        post_ratio = posterior_proposal / posterior_current\n",
     "\n",
     "        prob_next = np.min([post_ratio, 1])\n",
     "        unif_draw = sp.stats.uniform.rvs()\n",
@@ -685,10 +710,10 @@
     "        if unif_draw < prob_next:\n",
     "            lamda_current = lamda_proposal\n",
     "            lamda_mcmc.append(lamda_current)\n",
-    "            pass_rate.append('Y')\n",
+    "            pass_rate.append(\"Y\")\n",
     "        else:\n",
     "            lamda_mcmc.append(lamda_current)\n",
-    "            pass_rate.append('N')\n",
+    "            pass_rate.append(\"N\")\n",
     "    return lamda_mcmc, pass_rate"
    ]
   },
@@ -707,7 +732,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lamda_mcmc, pass_rate = gamma_poisson_mcmc_1(chain_size = 100000, tuning_param = 1)"
+    "lamda_mcmc, pass_rate = gamma_poisson_mcmc_1(chain_size=100000, tuning_param=1)"
    ]
   },
   {
@@ -736,23 +761,35 @@
     }
    ],
    "source": [
-    "y_rate = pass_rate.count('Y')/len(pass_rate)\n",
-    "n_rate = pass_rate.count('N')/len(pass_rate)\n",
-    "yes = ['Pass','Not Pass']\n",
-    "counts = [pass_rate.count('Y'), pass_rate.count('N')]\n",
+    "y_rate = pass_rate.count(\"Y\") / len(pass_rate)\n",
+    "n_rate = pass_rate.count(\"N\") / len(pass_rate)\n",
+    "yes = [\"Pass\", \"Not Pass\"]\n",
+    "counts = [pass_rate.count(\"Y\"), pass_rate.count(\"N\")]\n",
     "\n",
-    "fig, ax = plt.subplots(figsize = (12, 12), nrows = 3, ncols = 1)\n",
-    "ax[0].hist(lamda_mcmc[int(len(lamda_mcmc)/10)::2], bins=100, density=True)\n",
-    "ax[0].set_title(r'Posterior Frequency Distribution of $\\lambda$')\n",
-    "ax[0].plot(x, gamma_pdf_prior, label='Prior')\n",
-    "ax[0].plot(x, gamma_pdf_post, label='Posterior')\n",
+    "fig, ax = plt.subplots(figsize=(12, 12), nrows=3, ncols=1)\n",
+    "ax[0].hist(lamda_mcmc[int(len(lamda_mcmc) / 10) :: 2], bins=100, density=True)\n",
+    "ax[0].set_title(r\"Posterior Frequency Distribution of $\\lambda$\")\n",
+    "ax[0].plot(x, gamma_pdf_prior, label=\"Prior\")\n",
+    "ax[0].plot(x, gamma_pdf_post, label=\"Posterior\")\n",
     "ax[0].legend()\n",
     "ax[1].plot(np.arange(len(lamda_mcmc)), lamda_mcmc, lw=1)\n",
-    "ax[1].set_title('Trace')\n",
+    "ax[1].set_title(\"Trace\")\n",
     "\n",
-    "ax[2].barh(yes, counts, color=['green', 'blue'], alpha=.7)\n",
-    "ax[2].text(counts[1]*.4, 'Not Pass', r'${}\\%$'.format(np.round(n_rate*100,2)), color ='tomato', size = 28)\n",
-    "ax[2].text(counts[0]*.4, 'Pass', r'${}\\%$'.format(np.round(y_rate*100,2)), color ='tomato', size = 28)\n",
+    "ax[2].barh(yes, counts, color=[\"green\", \"blue\"], alpha=0.7)\n",
+    "ax[2].text(\n",
+    "    counts[1] * 0.4,\n",
+    "    \"Not Pass\",\n",
+    "    r\"${}\\%$\".format(np.round(n_rate * 100, 2)),\n",
+    "    color=\"tomato\",\n",
+    "    size=28,\n",
+    ")\n",
+    "ax[2].text(\n",
+    "    counts[0] * 0.4,\n",
+    "    \"Pass\",\n",
+    "    r\"${}\\%$\".format(np.round(y_rate * 100, 2)),\n",
+    "    color=\"tomato\",\n",
+    "    size=28,\n",
+    ")\n",
     "plt.show()"
    ]
   },
@@ -810,7 +847,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def gamma_poisson_mcmc_2(lamda_init = 2, k = 3, alpha = 10, beta= 2, tuning_param = 1, chain_size = 10000): \n",
+    "def gamma_poisson_mcmc_2(\n",
+    "    lamda_init=2, k=3, alpha=10, beta=2, tuning_param=1, chain_size=10000\n",
+    "):\n",
     "    np.random.seed(123)\n",
     "    lamda_current = lamda_init\n",
     "\n",
@@ -819,14 +858,18 @@
     "    post_ratio_list = []\n",
     "\n",
     "    for i in range(chain_size):\n",
-    "        log_lh_current = np.log(pois_lh(k = k, lamda = lamda_current))\n",
-    "        log_prior_current = np.log(gamma_prior(alpha=alpha, beta=beta, lamda=lamda_current))\n",
+    "        log_lh_current = np.log(pois_lh(k=k, lamda=lamda_current))\n",
+    "        log_prior_current = np.log(\n",
+    "            gamma_prior(alpha=alpha, beta=beta, lamda=lamda_current)\n",
+    "        )\n",
     "        log_posterior_current = log_lh_current + log_prior_current\n",
     "\n",
     "        lamda_proposal = sp.stats.norm(loc=lamda_current, scale=tuning_param).rvs()\n",
     "        if lamda_proposal < 0:\n",
     "            lamda_proposal *= -1\n",
-    "        log_prior_next = np.log(gamma_prior(alpha=alpha, beta=beta, lamda=lamda_proposal))\n",
+    "        log_prior_next = np.log(\n",
+    "            gamma_prior(alpha=alpha, beta=beta, lamda=lamda_proposal)\n",
+    "        )\n",
     "        log_lh_next = np.log(pois_lh(k, lamda=lamda_proposal))\n",
     "\n",
     "        log_posterior_proposal = log_lh_next + log_prior_next\n",
@@ -840,10 +883,10 @@
     "        if unif_draw < prob_next:\n",
     "            lamda_current = lamda_proposal\n",
     "            lamda_mcmc.append(lamda_current)\n",
-    "            pass_rate.append('Y')\n",
+    "            pass_rate.append(\"Y\")\n",
     "        else:\n",
     "            lamda_mcmc.append(lamda_current)\n",
-    "            pass_rate.append('N')\n",
+    "            pass_rate.append(\"N\")\n",
     "    return lamda_mcmc, pass_rate"
    ]
   },
@@ -862,7 +905,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lamda_mcmc, pass_rate = gamma_poisson_mcmc_2(chain_size = 100000, tuning_param = 3)"
+    "lamda_mcmc, pass_rate = gamma_poisson_mcmc_2(chain_size=100000, tuning_param=3)"
    ]
   },
   {
@@ -883,23 +926,35 @@
     }
    ],
    "source": [
-    "y_rate = pass_rate.count('Y')/len(pass_rate)\n",
-    "n_rate = pass_rate.count('N')/len(pass_rate)\n",
-    "yes = ['Pass','Not Pass']\n",
-    "counts = [pass_rate.count('Y'), pass_rate.count('N')]\n",
+    "y_rate = pass_rate.count(\"Y\") / len(pass_rate)\n",
+    "n_rate = pass_rate.count(\"N\") / len(pass_rate)\n",
+    "yes = [\"Pass\", \"Not Pass\"]\n",
+    "counts = [pass_rate.count(\"Y\"), pass_rate.count(\"N\")]\n",
     "\n",
-    "fig, ax = plt.subplots(figsize = (12, 12), nrows = 3, ncols = 1)\n",
-    "ax[0].hist(lamda_mcmc[int(len(lamda_mcmc)/10)::2], bins=100, density=True)\n",
-    "ax[0].set_title(r'Posterior Frequency Distribution of $\\lambda$')\n",
-    "ax[0].plot(x, gamma_pdf_prior, label='Prior')\n",
-    "ax[0].plot(x, gamma_pdf_post, label='Posterior')\n",
+    "fig, ax = plt.subplots(figsize=(12, 12), nrows=3, ncols=1)\n",
+    "ax[0].hist(lamda_mcmc[int(len(lamda_mcmc) / 10) :: 2], bins=100, density=True)\n",
+    "ax[0].set_title(r\"Posterior Frequency Distribution of $\\lambda$\")\n",
+    "ax[0].plot(x, gamma_pdf_prior, label=\"Prior\")\n",
+    "ax[0].plot(x, gamma_pdf_post, label=\"Posterior\")\n",
     "ax[0].legend()\n",
     "ax[1].plot(np.arange(len(lamda_mcmc)), lamda_mcmc, lw=1)\n",
-    "ax[1].set_title('Trace')\n",
+    "ax[1].set_title(\"Trace\")\n",
     "\n",
-    "ax[2].barh(yes, counts, color=['green', 'blue'], alpha=.7)\n",
-    "ax[2].text(counts[1]*.4, 'Not Pass', r'${}\\%$'.format(np.round(n_rate*100,2)), color ='tomato', size = 28)\n",
-    "ax[2].text(counts[0]*.4, 'Pass', r'${}\\%$'.format(np.round(y_rate*100,2)), color ='tomato', size = 28)\n",
+    "ax[2].barh(yes, counts, color=[\"green\", \"blue\"], alpha=0.7)\n",
+    "ax[2].text(\n",
+    "    counts[1] * 0.4,\n",
+    "    \"Not Pass\",\n",
+    "    r\"${}\\%$\".format(np.round(n_rate * 100, 2)),\n",
+    "    color=\"tomato\",\n",
+    "    size=28,\n",
+    ")\n",
+    "ax[2].text(\n",
+    "    counts[0] * 0.4,\n",
+    "    \"Pass\",\n",
+    "    r\"${}\\%$\".format(np.round(y_rate * 100, 2)),\n",
+    "    color=\"tomato\",\n",
+    "    size=28,\n",
+    ")\n",
     "plt.show()"
    ]
   },
@@ -939,10 +994,12 @@
    "source": [
     "lamda_mcmc = np.array(lamda_mcmc)\n",
     "n = 4\n",
-    "fig, ax = plt.subplots(ncols = 1, nrows = n ,figsize=(12, 10))\n",
-    "for i in range(1, n+1):\n",
-    "    g = plot_acf(lamda_mcmc[::i], ax=ax[i-1], title='', label=r'$lag={}$'.format(i), lags=30)\n",
-    "fig.suptitle('Markov chain Autocorrelation')\n",
+    "fig, ax = plt.subplots(ncols=1, nrows=n, figsize=(12, 10))\n",
+    "for i in range(1, n + 1):\n",
+    "    g = plot_acf(\n",
+    "        lamda_mcmc[::i], ax=ax[i - 1], title=\"\", label=r\"$lag={}$\".format(i), lags=30\n",
+    "    )\n",
+    "fig.suptitle(\"Markov chain Autocorrelation\")\n",
     "\n",
     "plt.show()"
    ]
