--- a/Chapter 5 - Metropolis-Hastings Algorithm.ipynb
+++ b/Chapter 5 - Metropolis-Hastings Algorithm.ipynb
@@ -13,7 +13,8 @@
     "import math as mt\n",
     "import scipy.special\n",
     "import seaborn as sns\n",
-    "plt.style.use('fivethirtyeight')\n",
+    "\n",
+    "plt.style.use(\"fivethirtyeight\")\n",
     "from statsmodels.graphics.tsaplots import plot_acf\n",
     "import pandas as pd"
    ]
@@ -104,11 +105,13 @@
    ],
    "source": [
     "x = np.linspace(0, 1, 100)\n",
-    "params = [.5, .5]\n",
+    "params = [0.5, 0.5]\n",
     "beta_pdf = sp.stats.beta.pdf(x, params[0], params[1])\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(7, 7))\n",
-    "ax.plot(x, beta_pdf, lw = 3, label = r'$\\alpha = %.1f, \\beta =  %.1f$' % (params[0], params[1]))\n",
+    "ax.plot(\n",
+    "    x, beta_pdf, lw=3, label=r\"$\\alpha = %.1f, \\beta =  %.1f$\" % (params[0], params[1])\n",
+    ")\n",
     "ax.legend()\n",
     "\n",
     "ax.axis([0, 1, 0, 3])\n",
@@ -149,35 +152,41 @@
     "x_norm_1 = np.linspace(-1, 1, 100)\n",
     "x_norm_2 = np.linspace(0, 1.8, 100)\n",
     "\n",
-    "params_beta = [.2, .8]\n",
+    "params_beta = [0.2, 0.8]\n",
     "beta_pdf = sp.stats.beta.pdf(x_beta, params_beta[0], params_beta[1])\n",
     "\n",
-    "mu_1 = .1\n",
-    "sigma_1 = .2\n",
-    "norm_pdf_1 = sp.stats.norm.pdf(x_norm_1 ,loc=mu_1, scale=sigma_1)\n",
+    "mu_1 = 0.1\n",
+    "sigma_1 = 0.2\n",
+    "norm_pdf_1 = sp.stats.norm.pdf(x_norm_1, loc=mu_1, scale=sigma_1)\n",
     "\n",
-    "mu_2 = .8\n",
-    "sigma_2 = .2\n",
-    "norm_pdf_2 = sp.stats.norm.pdf(x_norm_2 ,loc=mu_2, scale=sigma_2)\n",
+    "mu_2 = 0.8\n",
+    "sigma_2 = 0.2\n",
+    "norm_pdf_2 = sp.stats.norm.pdf(x_norm_2, loc=mu_2, scale=sigma_2)\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(15, 7))\n",
-    "ax.plot(x_beta, beta_pdf, lw = 3, label = r'beta dist $\\alpha = %.1f, \\beta =  %.1f$' % (params_beta[0], params_beta[1]), \n",
-    "        color='#FF6B1A')\n",
-    "ax.plot(x_norm_1, norm_pdf_1, lw = 3, label = r'proposal 1', color='#00B3AD')\n",
-    "ax.plot(x_norm_2, norm_pdf_2, lw = 3, label = r'proposal 2', color='#006663')\n",
+    "ax.plot(\n",
+    "    x_beta,\n",
+    "    beta_pdf,\n",
+    "    lw=3,\n",
+    "    label=r\"beta dist $\\alpha = %.1f, \\beta =  %.1f$\"\n",
+    "    % (params_beta[0], params_beta[1]),\n",
+    "    color=\"#FF6B1A\",\n",
+    ")\n",
+    "ax.plot(x_norm_1, norm_pdf_1, lw=3, label=r\"proposal 1\", color=\"#00B3AD\")\n",
+    "ax.plot(x_norm_2, norm_pdf_2, lw=3, label=r\"proposal 2\", color=\"#006663\")\n",
     "\n",
     "x_fill = np.linspace(-1, 0, 30)\n",
     "y_fill = sp.stats.norm.pdf(x_fill, loc=mu_1, scale=sigma_1)\n",
-    "ax.fill_between(x_fill, y_fill, color ='#00B3AD', alpha=.6)\n",
+    "ax.fill_between(x_fill, y_fill, color=\"#00B3AD\", alpha=0.6)\n",
     "\n",
     "x_fill = np.linspace(1, 1.8, 30)\n",
     "y_fill = sp.stats.norm.pdf(x_fill, loc=mu_2, scale=sigma_2)\n",
-    "ax.fill_between(x_fill, y_fill, color ='#006663', alpha=.6)\n",
+    "ax.fill_between(x_fill, y_fill, color=\"#006663\", alpha=0.6)\n",
     "\n",
-    "ax.axvline(0, color = 'tomato', ls='--', label='lower: {}'.format(0))\n",
-    "ax.axvline(1, color = 'tomato', ls='-.', label='upper: {}'.format(1))\n",
+    "ax.axvline(0, color=\"tomato\", ls=\"--\", label=\"lower: {}\".format(0))\n",
+    "ax.axvline(1, color=\"tomato\", ls=\"-.\", label=\"upper: {}\".format(1))\n",
     "ax.legend()\n",
-    "ax.axis([-.75, 1.8, 0, 3])\n",
+    "ax.axis([-0.75, 1.8, 0, 3])\n",
     "plt.show()"
    ]
   },
@@ -209,10 +218,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lamda_c = .3\n",
-    "lamda_p = .4\n",
+    "lamda_c = 0.3\n",
+    "lamda_p = 0.4\n",
     "beta = 3\n",
-    "alpha = .9/.7"
+    "alpha = 0.9 / 0.7"
    ]
   },
   {
@@ -290,14 +299,15 @@
     "beta_pdf = sp.stats.beta.pdf(x, alpha, beta)\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(7, 7))\n",
-    "ax.plot(x, beta_pdf, lw = 3, label = r'$\\alpha = %.4f, \\beta =  %.1f$' % (alpha, beta))\n",
-    "ax.axvline(lamda_c, color = 'tomato', ls='-.', label='mean: $\\lambda_c$={}'.format(lamda_c))\n",
-    "ax.text(.29, -.1, '$\\lambda_c$', color='tomato')\n",
+    "ax.plot(x, beta_pdf, lw=3, label=r\"$\\alpha = %.4f, \\beta =  %.1f$\" % (alpha, beta))\n",
+    "ax.axvline(\n",
+    "    lamda_c, color=\"tomato\", ls=\"-.\", label=\"mean: $\\lambda_c$={}\".format(lamda_c)\n",
+    ")\n",
+    "ax.text(0.29, -0.1, \"$\\lambda_c$\", color=\"tomato\")\n",
     "\n",
-    "ax.axvline(lamda_p, color = '#00B3AD', ls='-.', label='$\\lambda_p$={}'.format(lamda_p))\n",
-    "ax.axhline(g_d, color = '#006663', ls='-.', \n",
-    "           label=r'$g_d={:.4f}$'.format(g_d))\n",
-    "ax.text(.41, .05, '$\\lambda_p$', color='#00B3AD')\n",
+    "ax.axvline(lamda_p, color=\"#00B3AD\", ls=\"-.\", label=\"$\\lambda_p$={}\".format(lamda_p))\n",
+    "ax.axhline(g_d, color=\"#006663\", ls=\"-.\", label=r\"$g_d={:.4f}$\".format(g_d))\n",
+    "ax.text(0.41, 0.05, \"$\\lambda_p$\", color=\"#00B3AD\")\n",
     "\n",
     "ax.legend()\n",
     "\n",
@@ -339,7 +349,7 @@
    "outputs": [],
    "source": [
     "beta = 3\n",
-    "alpha = 1.2/.6\n",
+    "alpha = 1.2 / 0.6\n",
     "g_n = sp.stats.beta.pdf(x=lamda_c, a=alpha, b=beta)"
    ]
   },
@@ -386,14 +396,15 @@
     "beta_pdf = sp.stats.beta.pdf(x, alpha, beta)\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(7, 7))\n",
-    "ax.plot(x, beta_pdf, lw = 3, label = r'$\\alpha = %.4f, \\beta =  %.1f$' % (alpha, beta))\n",
-    "ax.axvline(lamda_c, color = 'tomato', ls='-.', label='$\\lambda_c$={}'.format(lamda_c))\n",
-    "ax.text(.29, -.1, '$\\lambda_c$', color='tomato')\n",
+    "ax.plot(x, beta_pdf, lw=3, label=r\"$\\alpha = %.4f, \\beta =  %.1f$\" % (alpha, beta))\n",
+    "ax.axvline(lamda_c, color=\"tomato\", ls=\"-.\", label=\"$\\lambda_c$={}\".format(lamda_c))\n",
+    "ax.text(0.29, -0.1, \"$\\lambda_c$\", color=\"tomato\")\n",
     "\n",
-    "ax.axvline(lamda_p, color = '#00B3AD', ls='-.', label='mean: $\\lambda_p$={}'.format(lamda_p))\n",
-    "ax.axhline(g_n, color = '#006663', ls='-.', \n",
-    "           label='$g_n={:.4f}$'.format(g_n))\n",
-    "ax.text(.41, .05, '$\\lambda_p$', color='#00B3AD')\n",
+    "ax.axvline(\n",
+    "    lamda_p, color=\"#00B3AD\", ls=\"-.\", label=\"mean: $\\lambda_p$={}\".format(lamda_p)\n",
+    ")\n",
+    "ax.axhline(g_n, color=\"#006663\", ls=\"-.\", label=\"$g_n={:.4f}$\".format(g_n))\n",
+    "ax.text(0.41, 0.05, \"$\\lambda_p$\", color=\"#00B3AD\")\n",
     "\n",
     "ax.legend()\n",
     "\n",
@@ -438,7 +449,8 @@
     }
    ],
    "source": [
-    "cf = g_n/g_d; cf"
+    "cf = g_n / g_d\n",
+    "cf"
    ]
   },
   {
@@ -468,7 +480,7 @@
    "outputs": [],
    "source": [
     "def binom_lh(n, k, lamda):\n",
-    "    lh = sp.special.binom(n, k)*lamda**k*(1-lamda)**(n-k)\n",
+    "    lh = sp.special.binom(n, k) * lamda**k * (1 - lamda) ** (n - k)\n",
     "    return lh"
    ]
   },
@@ -489,7 +501,11 @@
    "outputs": [],
    "source": [
     "def beta_prior(alpha, beta, lamda):\n",
-    "    prior = (1/sp.special.beta(alpha, beta))*lamda**(alpha-1)*(1-lamda)**(beta-1)\n",
+    "    prior = (\n",
+    "        (1 / sp.special.beta(alpha, beta))\n",
+    "        * lamda ** (alpha - 1)\n",
+    "        * (1 - lamda) ** (beta - 1)\n",
+    "    )\n",
     "    return prior"
    ]
   },
@@ -506,7 +522,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def beta_binom_mh(lamda_init = .6, n= 10, k = 3, alpha_prparams = .5, beta_prparams= .5, tuning_beta = 3, chain_size = 10000): \n",
+    "def beta_binom_mh(\n",
+    "    lamda_init=0.6,\n",
+    "    n=10,\n",
+    "    k=3,\n",
+    "    alpha_prparams=0.5,\n",
+    "    beta_prparams=0.5,\n",
+    "    tuning_beta=3,\n",
+    "    chain_size=10000,\n",
+    "):\n",
     "    np.random.seed(123)\n",
     "    lamda_current = lamda_init\n",
     "\n",
@@ -516,43 +540,49 @@
     "\n",
     "    for i in range(chain_size):\n",
     "        # prior specification\n",
-    "        log_lh_current = np.log(binom_lh(n = n, k = k, lamda = lamda_current))\n",
-    "        log_prior_current = np.log(beta_prior(alpha=alpha_prparams, beta=beta_prparams, lamda=lamda_current))\n",
+    "        log_lh_current = np.log(binom_lh(n=n, k=k, lamda=lamda_current))\n",
+    "        log_prior_current = np.log(\n",
+    "            beta_prior(alpha=alpha_prparams, beta=beta_prparams, lamda=lamda_current)\n",
+    "        )\n",
     "        log_posterior_current = log_lh_current + log_prior_current\n",
-    "        \n",
+    "\n",
     "        # parameter specification for proposal distribution\n",
-    "        tuning_alpha = (lamda_current*tuning_beta)/(1-lamda_current)\n",
+    "        tuning_alpha = (lamda_current * tuning_beta) / (1 - lamda_current)\n",
     "        lamda_proposal = sp.stats.beta(a=tuning_alpha, b=tuning_beta).rvs()\n",
-    "        \n",
+    "\n",
     "        # proposal specification\n",
-    "        log_lh_proposal = np.log(binom_lh(n = n, k = k, lamda=lamda_proposal))\n",
-    "        log_prior_proposal = np.log(beta_prior(alpha=alpha, beta=beta, lamda=lamda_proposal))\n",
+    "        log_lh_proposal = np.log(binom_lh(n=n, k=k, lamda=lamda_proposal))\n",
+    "        log_prior_proposal = np.log(\n",
+    "            beta_prior(alpha=alpha, beta=beta, lamda=lamda_proposal)\n",
+    "        )\n",
     "        log_posterior_proposal = log_lh_proposal + log_prior_proposal\n",
-    " \n",
+    "\n",
     "        # posterior ratio\n",
     "        log_post_ratio = log_posterior_proposal - log_posterior_current\n",
     "        post_ratio = np.exp(log_post_ratio)\n",
-    "        \n",
+    "\n",
     "        # Correction factor\n",
-    "        cf_denominator = sp.stats.beta.pdf(x=lamda_proposal, a=tuning_alpha, b=tuning_beta)\n",
-    "        \n",
-    "        cf_num_alpha = (lamda_proposal*tuning_beta)/(1-lamda_proposal)\n",
+    "        cf_denominator = sp.stats.beta.pdf(\n",
+    "            x=lamda_proposal, a=tuning_alpha, b=tuning_beta\n",
+    "        )\n",
+    "\n",
+    "        cf_num_alpha = (lamda_proposal * tuning_beta) / (1 - lamda_proposal)\n",
     "        cf_numerator = sp.stats.beta.pdf(x=lamda_current, a=cf_num_alpha, b=tuning_beta)\n",
-    "        \n",
-    "        cf = cf_numerator/cf_denominator\n",
-    "        \n",
+    "\n",
+    "        cf = cf_numerator / cf_denominator\n",
+    "\n",
     "        # acceptance rule\n",
-    "        prob_proposal = np.min([post_ratio*cf, 1])\n",
+    "        prob_proposal = np.min([post_ratio * cf, 1])\n",
     "        unif_draw = sp.stats.uniform.rvs()\n",
     "        post_ratio_list.append(post_ratio)\n",
     "\n",
     "        if unif_draw < prob_proposal:\n",
     "            lamda_current = lamda_proposal\n",
     "            lamda_mcmc.append(lamda_current)\n",
-    "            pass_rate.append('Y')\n",
+    "            pass_rate.append(\"Y\")\n",
     "        else:\n",
     "            lamda_mcmc.append(lamda_current)\n",
-    "            pass_rate.append('N')\n",
+    "            pass_rate.append(\"N\")\n",
     "    return lamda_mcmc, pass_rate"
    ]
   },
@@ -562,7 +592,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lamda_mcmc, pass_rate = beta_binom_mh(n= 10, k = 3, tuning_beta = 3, chain_size = 20000)"
+    "lamda_mcmc, pass_rate = beta_binom_mh(n=10, k=3, tuning_beta=3, chain_size=20000)"
    ]
   },
   {
@@ -579,7 +609,7 @@
    "outputs": [],
    "source": [
     "x = np.linspace(0, 1, 100)\n",
-    "alpha_pr, beta_pr = .5, .5\n",
+    "alpha_pr, beta_pr = 0.5, 0.5\n",
     "beta_pdf_prior = sp.stats.beta.pdf(x, a=alpha_pr, b=beta_pr)"
    ]
   },
@@ -591,12 +621,15 @@
    "source": [
     "from scipy.optimize import fsolve\n",
     "\n",
+    "\n",
     "def solve_equ(x, mu=np.mean(lamda_mcmc), sigma=np.std(lamda_mcmc)):\n",
     "    a, b = x[0], x[1]\n",
     "    F = np.empty(2)\n",
-    "    F[0] = a - mu*(a + b)\n",
-    "    F[1] = a*b - (a + b)**2 * (a + b + 1) * sigma**2\n",
+    "    F[0] = a - mu * (a + b)\n",
+    "    F[1] = a * b - (a + b) ** 2 * (a + b + 1) * sigma**2\n",
     "    return F\n",
+    "\n",
+    "\n",
     "xGuess = np.array([6, 6])\n",
     "z = fsolve(solve_equ, xGuess)"
    ]
@@ -617,8 +650,8 @@
    ],
    "source": [
     "alpha_post, beta_post = z[0], z[1]\n",
-    "print('alpha_post: {}'.format(z[0]))\n",
-    "print('beta_post: {}'.format(z[1]))\n",
+    "print(\"alpha_post: {}\".format(z[0]))\n",
+    "print(\"beta_post: {}\".format(z[1]))\n",
     "beta_pdf_post = sp.stats.beta.pdf(x, a=alpha_post, b=beta_post)"
    ]
   },
@@ -639,23 +672,35 @@
     }
    ],
    "source": [
-    "y_rate = pass_rate.count('Y')/len(pass_rate)\n",
-    "n_rate = pass_rate.count('N')/len(pass_rate)\n",
-    "yes = ['Pass','Not Pass']\n",
-    "counts = [pass_rate.count('Y'), pass_rate.count('N')]\n",
+    "y_rate = pass_rate.count(\"Y\") / len(pass_rate)\n",
+    "n_rate = pass_rate.count(\"N\") / len(pass_rate)\n",
+    "yes = [\"Pass\", \"Not Pass\"]\n",
+    "counts = [pass_rate.count(\"Y\"), pass_rate.count(\"N\")]\n",
     "\n",
-    "fig, ax = plt.subplots(figsize = (12, 12), nrows = 3, ncols = 1)\n",
+    "fig, ax = plt.subplots(figsize=(12, 12), nrows=3, ncols=1)\n",
     "ax[0].hist(lamda_mcmc, bins=100, density=True)\n",
-    "ax[0].set_title(r'Posterior Frequency Distribution of $\\lambda$')\n",
-    "ax[0].plot(x, beta_pdf_prior, label='Prior')\n",
-    "ax[0].plot(x, beta_pdf_post, label='Posterior')\n",
+    "ax[0].set_title(r\"Posterior Frequency Distribution of $\\lambda$\")\n",
+    "ax[0].plot(x, beta_pdf_prior, label=\"Prior\")\n",
+    "ax[0].plot(x, beta_pdf_post, label=\"Posterior\")\n",
     "ax[0].legend()\n",
     "ax[1].plot(np.arange(len(lamda_mcmc)), lamda_mcmc, lw=1)\n",
-    "ax[1].set_title('Trace')\n",
+    "ax[1].set_title(\"Trace\")\n",
     "\n",
-    "ax[2].barh(yes, counts, color=['green', 'blue'], alpha=.7)\n",
-    "ax[2].text(counts[1]*.4, 'Not Pass', r'${}\\%$'.format(np.round(n_rate*100,2)), color ='tomato', size = 28)\n",
-    "ax[2].text(counts[0]*.4, 'Pass', r'${}\\%$'.format(np.round(y_rate*100,2)), color ='tomato', size = 28)\n",
+    "ax[2].barh(yes, counts, color=[\"green\", \"blue\"], alpha=0.7)\n",
+    "ax[2].text(\n",
+    "    counts[1] * 0.4,\n",
+    "    \"Not Pass\",\n",
+    "    r\"${}\\%$\".format(np.round(n_rate * 100, 2)),\n",
+    "    color=\"tomato\",\n",
+    "    size=28,\n",
+    ")\n",
+    "ax[2].text(\n",
+    "    counts[0] * 0.4,\n",
+    "    \"Pass\",\n",
+    "    r\"${}\\%$\".format(np.round(y_rate * 100, 2)),\n",
+    "    color=\"tomato\",\n",
+    "    size=28,\n",
+    ")\n",
     "plt.show()"
    ]
   },
@@ -681,10 +726,12 @@
    "source": [
     "import numpy as np\n",
     "\n",
+    "\n",
     "def log_gaussian(x, mu, sigma):\n",
     "    # The np.sum() is for compatibility with sample_MH\n",
-    "    return - 0.5 * np.sum((x - mu) ** 2) / sigma ** 2 \\\n",
-    "           - np.log(np.sqrt(2 * np.pi * sigma ** 2))\n",
+    "    return -0.5 * np.sum((x - mu) ** 2) / sigma**2 - np.log(\n",
+    "        np.sqrt(2 * np.pi * sigma**2)\n",
+    "    )\n",
     "\n",
     "\n",
     "class BivariateNormal(object):\n",
@@ -701,11 +748,12 @@
     "        return log_gaussian(x, self.mu2, self.sigma2)\n",
     "\n",
     "    def log_prob(self, x):\n",
-    "        cov_matrix = np.array([[self.sigma1 ** 2, 0],\n",
-    "                               [0, self.sigma2 ** 2]])\n",
+    "        cov_matrix = np.array([[self.sigma1**2, 0], [0, self.sigma2**2]])\n",
     "        inv_cov_matrix = np.linalg.inv(cov_matrix)\n",
     "        kernel = -0.5 * (x - self.mu1) @ inv_cov_matrix @ (x - self.mu2).T\n",
-    "        normalization = np.log(np.sqrt((2 * np.pi) ** self.n_variates * np.linalg.det(cov_matrix)))\n",
+    "        normalization = np.log(\n",
+    "            np.sqrt((2 * np.pi) ** self.n_variates * np.linalg.det(cov_matrix))\n",
+    "        )\n",
     "\n",
     "        return kernel - normalization\n",
     "\n",
