--- a/Chapter 6 - Gibbs Sampler.ipynb
+++ b/Chapter 6 - Gibbs Sampler.ipynb
@@ -13,7 +13,8 @@
     "import math as mt\n",
     "import scipy.special\n",
     "import seaborn as sns\n",
-    "plt.style.use('fivethirtyeight')\n",
+    "\n",
+    "plt.style.use(\"fivethirtyeight\")\n",
     "from statsmodels.graphics.tsaplots import plot_acf\n",
     "import pandas as pd"
    ]
@@ -83,20 +84,20 @@
     }
    ],
    "source": [
-    "mu_0, tau_0 = 170, .35\n",
+    "mu_0, tau_0 = 170, 0.35\n",
     "x_mu = np.linspace(150, 190, 100)\n",
-    "y_mu = sp.stats.norm(loc=mu_0, scale=1/tau_0).pdf(x_mu)\n",
+    "y_mu = sp.stats.norm(loc=mu_0, scale=1 / tau_0).pdf(x_mu)\n",
     "\n",
     "alpha_0, beta_0 = 2, 1\n",
     "x_tau = np.linspace(0, 8, 100)\n",
-    "y_tau = sp.stats.gamma(a=alpha_0, scale=1/beta_0).pdf(x_tau)\n",
+    "y_tau = sp.stats.gamma(a=alpha_0, scale=1 / beta_0).pdf(x_tau)\n",
     "\n",
-    "fig, ax = plt.subplots(figsize=(15,5), nrows=1, ncols=2)\n",
-    "ax[0].plot(x_mu, y_mu, label =r'$\\mu_0={}, \\tau_0={}$'.format(mu_0, tau_0))\n",
-    "ax[0].set_title(r'Prior of $\\mu$')\n",
+    "fig, ax = plt.subplots(figsize=(15, 5), nrows=1, ncols=2)\n",
+    "ax[0].plot(x_mu, y_mu, label=r\"$\\mu_0={}, \\tau_0={}$\".format(mu_0, tau_0))\n",
+    "ax[0].set_title(r\"Prior of $\\mu$\")\n",
     "ax[0].legend()\n",
-    "ax[1].plot(x_tau, y_tau, label = r'$\\alpha_0={}, \\beta_0={}$'.format(alpha_0, beta_0))\n",
-    "ax[1].set_title(r'Prior of $\\tau$')\n",
+    "ax[1].plot(x_tau, y_tau, label=r\"$\\alpha_0={}, \\beta_0={}$\".format(alpha_0, beta_0))\n",
+    "ax[1].set_title(r\"Prior of $\\tau$\")\n",
     "ax[1].legend()\n",
     "plt.show()"
    ]
@@ -126,10 +127,10 @@
    ],
    "source": [
     "n = 30000\n",
-    "mu_height = sp.stats.norm(loc=mu_0, scale=1/tau_0).rvs(n)\n",
-    "tau_height = sp.stats.gamma(a=alpha_0, scale=1/beta_0).rvs(n)\n",
-    "fig, ax = plt.subplots(figsize=(8,5))\n",
-    "ax.scatter(mu_height, tau_height, s = 3)\n",
+    "mu_height = sp.stats.norm(loc=mu_0, scale=1 / tau_0).rvs(n)\n",
+    "tau_height = sp.stats.gamma(a=alpha_0, scale=1 / beta_0).rvs(n)\n",
+    "fig, ax = plt.subplots(figsize=(8, 5))\n",
+    "ax.scatter(mu_height, tau_height, s=3)\n",
     "plt.show()"
    ]
   },
@@ -231,14 +232,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mu_post = [0] \n",
-    "tau_post = [0] # 0 is placeholder, there isn't 0th eletment, according to algo\n",
+    "mu_post = [0]\n",
+    "tau_post = [0]  # 0 is placeholder, there isn't 0th eletment, according to algo\n",
     "\n",
     "tau_proposal = [7]\n",
-    "mu_proposal = [0] # 0 is placeholder\n",
+    "mu_proposal = [0]  # 0 is placeholder\n",
     "\n",
-    "mu_post.append((.15*170+tau_proposal[0]*1716)/(.15+10*tau_proposal[0]))\n",
-    "tau_post.append(.15+10*tau_proposal[0])"
+    "mu_post.append((0.15 * 170 + tau_proposal[0] * 1716) / (0.15 + 10 * tau_proposal[0]))\n",
+    "tau_post.append(0.15 + 10 * tau_proposal[0])"
    ]
   },
   {
@@ -254,7 +255,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mu_proposal_draw = sp.stats.norm(loc=mu_post[1], scale=1/tau_post[1]).rvs()\n",
+    "mu_proposal_draw = sp.stats.norm(loc=mu_post[1], scale=1 / tau_post[1]).rvs()\n",
     "mu_proposal.append(mu_proposal_draw)"
    ]
   },
@@ -278,10 +279,10 @@
     "alpha_post = [0]\n",
     "beta_post = [0]\n",
     "\n",
-    "alpha_post.append(alpha_0+10/2)\n",
-    "beta_post.append(beta_0+np.sum((heights-mu_post[-1])**2)/2)\n",
+    "alpha_post.append(alpha_0 + 10 / 2)\n",
+    "beta_post.append(beta_0 + np.sum((heights - mu_post[-1]) ** 2) / 2)\n",
     "\n",
-    "tau_proposal_draw = sp.stats.gamma(a=alpha_post[-1], scale=1/beta_post[-1]).rvs()\n",
+    "tau_proposal_draw = sp.stats.gamma(a=alpha_post[-1], scale=1 / beta_post[-1]).rvs()\n",
     "tau_proposal.append(tau_proposal_draw)"
    ]
   },
@@ -318,23 +319,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mu_post, tau_post, alpha_post, beta_post, mu_proposal, chain_size = [], [], [], [], [], 10000\n",
+    "mu_post, tau_post, alpha_post, beta_post, mu_proposal, chain_size = (\n",
+    "    [],\n",
+    "    [],\n",
+    "    [],\n",
+    "    [],\n",
+    "    [],\n",
+    "    10000,\n",
+    ")\n",
     "\n",
-    "def gibbs_norm_gam_joint(mu_0=170, tau_0=.35, tau_proposal_init=7, alpha_0=2, beta_0=1, chain_size = chain_size, data=heights):\n",
+    "\n",
+    "def gibbs_norm_gam_joint(\n",
+    "    mu_0=170,\n",
+    "    tau_0=0.35,\n",
+    "    tau_proposal_init=7,\n",
+    "    alpha_0=2,\n",
+    "    beta_0=1,\n",
+    "    chain_size=chain_size,\n",
+    "    data=heights,\n",
+    "):\n",
     "    tau_proposal = [tau_proposal_init]\n",
     "    n = len(data)\n",
     "    for i in range(chain_size):\n",
-    "        \n",
-    "        mu_post.append((tau_0*mu_0+tau_proposal[-1]*np.sum(data))/(tau_0+n*tau_proposal[-1]))\n",
-    "        tau_post.append(tau_0+n*tau_proposal[-1])\n",
     "\n",
-    "        mu_proposal_draw = sp.stats.norm(loc=mu_post[-1], scale=1/tau_post[-1]).rvs()\n",
+    "        mu_post.append(\n",
+    "            (tau_0 * mu_0 + tau_proposal[-1] * np.sum(data))\n",
+    "            / (tau_0 + n * tau_proposal[-1])\n",
+    "        )\n",
+    "        tau_post.append(tau_0 + n * tau_proposal[-1])\n",
+    "\n",
+    "        mu_proposal_draw = sp.stats.norm(loc=mu_post[-1], scale=1 / tau_post[-1]).rvs()\n",
     "        mu_proposal.append(mu_proposal_draw)\n",
     "\n",
-    "        alpha_post.append(alpha_0+n/2)\n",
-    "        beta_post.append(beta_0+np.sum((heights-mu_post[-1])**2)/2)\n",
+    "        alpha_post.append(alpha_0 + n / 2)\n",
+    "        beta_post.append(beta_0 + np.sum((heights - mu_post[-1]) ** 2) / 2)\n",
     "\n",
-    "        tau_proposal_draw = sp.stats.gamma(a=alpha_post[-1], scale=1/beta_post[-1]).rvs()\n",
+    "        tau_proposal_draw = sp.stats.gamma(\n",
+    "            a=alpha_post[-1], scale=1 / beta_post[-1]\n",
+    "        ).rvs()\n",
     "        tau_proposal.append(tau_proposal_draw)\n",
     "    return mu_post, tau_post"
    ]
@@ -393,16 +415,19 @@
    "source": [
     "from scipy.optimize import fsolve\n",
     "\n",
+    "\n",
     "def solve_equ(x, mu=np.mean(tau_post), sigma=np.std(tau_post)):\n",
     "    a, b = x[0], x[1]\n",
     "    F = np.empty(2)\n",
-    "    F[0] = mu-x[0]/x[1]\n",
-    "    F[1] = sigma**2-x[0]/(x[1]**2)\n",
+    "    F[0] = mu - x[0] / x[1]\n",
+    "    F[1] = sigma**2 - x[0] / (x[1] ** 2)\n",
     "    return F\n",
+    "\n",
+    "\n",
     "xGuess = np.array([2, 2])\n",
     "z = fsolve(solve_equ, xGuess)\n",
-    "print('alpha: {}'.format(z[0]))\n",
-    "print('beta: {}'.format(z[1]))"
+    "print(\"alpha: {}\".format(z[0]))\n",
+    "print(\"beta: {}\".format(z[1]))"
    ]
   },
   {
@@ -411,8 +436,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_tau = np.linspace(.37, 1, 100)\n",
-    "tau_dist = sp.stats.gamma(a=z[0],scale=1/z[1]).pdf(x_tau)"
+    "x_tau = np.linspace(0.37, 1, 100)\n",
+    "tau_dist = sp.stats.gamma(a=z[0], scale=1 / z[1]).pdf(x_tau)"
    ]
   },
   {
@@ -442,16 +467,16 @@
     }
    ],
    "source": [
-    "fig, ax = plt.subplots(figsize = (18, 12), nrows = 2, ncols = 2)\n",
-    "ax[0,0].hist(mu_post, bins=100, density=True)\n",
-    "ax[0,0].plot(x_mu, mu_dist, alpha=.7)\n",
-    "ax[0,0].set_ylabel('Posterior distribution of $\\mu$')\n",
-    "ax[1,0].hist(tau_post[1:], bins=100, density=True)\n",
-    "ax[1,0].plot(x_tau, tau_dist, alpha=.7)\n",
-    "ax[1,0].set_ylabel(r'Posterior distribution of $\\tau$')\n",
-    "ax[0,1].plot(np.arange(chain_size-1),mu_post[1:],lw=.5)\n",
-    "ax[1,1].plot(np.arange(chain_size-1),tau_post[1:], lw=.5)\n",
-    "fig.suptitle('Gibbs Sampling Example of Female Height', y = .93, size=26)\n",
+    "fig, ax = plt.subplots(figsize=(18, 12), nrows=2, ncols=2)\n",
+    "ax[0, 0].hist(mu_post, bins=100, density=True)\n",
+    "ax[0, 0].plot(x_mu, mu_dist, alpha=0.7)\n",
+    "ax[0, 0].set_ylabel(\"Posterior distribution of $\\mu$\")\n",
+    "ax[1, 0].hist(tau_post[1:], bins=100, density=True)\n",
+    "ax[1, 0].plot(x_tau, tau_dist, alpha=0.7)\n",
+    "ax[1, 0].set_ylabel(r\"Posterior distribution of $\\tau$\")\n",
+    "ax[0, 1].plot(np.arange(chain_size - 1), mu_post[1:], lw=0.5)\n",
+    "ax[1, 1].plot(np.arange(chain_size - 1), tau_post[1:], lw=0.5)\n",
+    "fig.suptitle(\"Gibbs Sampling Example of Female Height\", y=0.93, size=26)\n",
     "plt.show()"
    ]
   },
