--- a/Chapter 7 - Revisit Linear Regression With MCMC.ipynb
+++ b/Chapter 7 - Revisit Linear Regression With MCMC.ipynb
@@ -13,7 +13,8 @@
     "import math as mt\n",
     "import scipy.special\n",
     "import seaborn as sns\n",
-    "plt.style.use('fivethirtyeight')\n",
+    "\n",
+    "plt.style.use(\"fivethirtyeight\")\n",
     "from statsmodels.graphics.tsaplots import plot_acf\n",
     "import pandas as pd"
    ]
