--- a/Chapter 8 - General Linear Model.ipynb
+++ b/Chapter 8 - General Linear Model.ipynb
@@ -12,7 +12,8 @@
     "import scipy.stats\n",
     "import matplotlib.pyplot as plt\n",
     "import scipy.special\n",
-    "#plt.style.use('fivethirtyeight')\n",
+    "\n",
+    "# plt.style.use('fivethirtyeight')\n",
     "import pandas as pd\n",
     "import statsmodels.api as sm\n",
     "import pymc as pm"
@@ -87,10 +88,10 @@
    ],
    "source": [
     "z = np.linspace(-8, 8)\n",
-    "fig, ax = plt.subplots(figsize = (8, 5))\n",
+    "fig, ax = plt.subplots(figsize=(8, 5))\n",
     "ax.plot(z, 1 / (1 + np.exp(-z)))\n",
-    "ax.set_xlabel('z')\n",
-    "ax.set_ylabel(r'$P = 1/(1+e^{-Z})$')\n",
+    "ax.set_xlabel(\"z\")\n",
+    "ax.set_ylabel(r\"$P = 1/(1+e^{-Z})$\")\n",
     "ax.grid()\n",
     "plt.show()"
    ]
@@ -257,10 +258,13 @@
     }
    ],
    "source": [
-    "df = pd.read_excel('Basic_Econometrics_practice_data.xlsx', sheet_name = 'HouseOwn_Quali_Resp'); df.head()\n",
+    "df = pd.read_excel(\n",
+    "    \"Basic_Econometrics_practice_data.xlsx\", sheet_name=\"HouseOwn_Quali_Resp\"\n",
+    ")\n",
+    "df.head()\n",
     "\n",
-    "Y = df[['Own_House']]\n",
-    "X = df[['Annual_Family_Income']]\n",
+    "Y = df[[\"Own_House\"]]\n",
+    "X = df[[\"Annual_Family_Income\"]]\n",
     "X = sm.add_constant(X)\n",
     "\n",
     "log_reg = sm.Logit(Y, X).fit()"
@@ -347,13 +351,13 @@
    ],
    "source": [
     "X = np.linspace(0, 100, 500)\n",
-    "P_hat = 1/(1 + np.exp(-log_reg.params[0]-log_reg.params[1]*X))\n",
+    "P_hat = 1 / (1 + np.exp(-log_reg.params[0] - log_reg.params[1] * X))\n",
     "\n",
-    "fig, ax = plt.subplots(figsize = (8, 5))\n",
-    "ax.scatter(df['Annual_Family_Income'], df['Own_House'])\n",
-    "ax.plot(X, P_hat, color = 'tomato', lw = 3)\n",
-    "ax.set_xlabel('Income')\n",
-    "ax.set_ylabel('Owning a flat = 1, Not Owning = 0')\n",
+    "fig, ax = plt.subplots(figsize=(8, 5))\n",
+    "ax.scatter(df[\"Annual_Family_Income\"], df[\"Own_House\"])\n",
+    "ax.plot(X, P_hat, color=\"tomato\", lw=3)\n",
+    "ax.set_xlabel(\"Income\")\n",
+    "ax.set_ylabel(\"Owning a flat = 1, Not Owning = 0\")\n",
     "ax.grid()\n",
     "plt.show()"
    ]
@@ -399,18 +403,18 @@
     "beta1_hat, beta2_hat = log_reg.params[0], log_reg.params[1]\n",
     "X = np.linspace(0, 100, 500)\n",
     "\n",
-    "Z = beta1_hat + beta2_hat*X\n",
-    "dPdX = np.exp(-Z)/(1+np.exp(-Z))**2*beta2_hat\n",
+    "Z = beta1_hat + beta2_hat * X\n",
+    "dPdX = np.exp(-Z) / (1 + np.exp(-Z)) ** 2 * beta2_hat\n",
     "\n",
-    "fig, ax1 = plt.subplots(figsize = (8, 5))\n",
-    "ax1.scatter(df['Annual_Family_Income'], df['Own_House'])\n",
-    "ax1.plot(X, P_hat, color = 'tomato', lw = 3, label='Accumulative Effect')\n",
-    "ax1.legend(loc ='center left')\n",
+    "fig, ax1 = plt.subplots(figsize=(8, 5))\n",
+    "ax1.scatter(df[\"Annual_Family_Income\"], df[\"Own_House\"])\n",
+    "ax1.plot(X, P_hat, color=\"tomato\", lw=3, label=\"Accumulative Effect\")\n",
+    "ax1.legend(loc=\"center left\")\n",
     "\n",
-    "ax2 = ax1.twinx() \n",
-    "ax2.plot(X, dPdX, lw = 3, color = 'Gold', label = 'Marginal Effect')\n",
-    "ax2.legend(loc='center right')\n",
-    "ax2.set_title('Accumulative and Marginal Effect of Family Income on Owning a House')\n",
+    "ax2 = ax1.twinx()\n",
+    "ax2.plot(X, dPdX, lw=3, color=\"Gold\", label=\"Marginal Effect\")\n",
+    "ax2.legend(loc=\"center right\")\n",
+    "ax2.set_title(\"Accumulative and Marginal Effect of Family Income on Owning a House\")\n",
     "ax2.grid()\n",
     "plt.show()"
    ]
@@ -441,9 +445,10 @@
     }
    ],
    "source": [
-    "X_mean = np.mean(df['Annual_Family_Income'])\n",
-    "Z_mean_effect = beta1_hat + beta2_hat*X_mean\n",
-    "dPdX = np.exp(-Z_mean_effect)/(1+np.exp(-Z_mean_effect))**2*beta2_hat; dPdX"
+    "X_mean = np.mean(df[\"Annual_Family_Income\"])\n",
+    "Z_mean_effect = beta1_hat + beta2_hat * X_mean\n",
+    "dPdX = np.exp(-Z_mean_effect) / (1 + np.exp(-Z_mean_effect)) ** 2 * beta2_hat\n",
+    "dPdX"
    ]
   },
   {
@@ -503,14 +508,14 @@
    ],
    "source": [
     "with pm.Model() as model_0:\n",
-    "    beta1 = pm.Normal('beta1', mu=0, sigma=10)\n",
-    "    beta2 = pm.Normal('beta2', mu=0, sigma=10)\n",
-    "    \n",
-    "    mu = beta1 + beta2*df['Annual_Family_Income']   \n",
-    "    theta = pm.Deterministic('theta', pm.math.sigmoid(mu))\n",
-    "    bd = pm.Deterministic('bd', -beta1/beta2)\n",
-    "    \n",
-    "    yl = pm.Bernoulli('yl', p=theta, observed=df['Own_House'])\n",
+    "    beta1 = pm.Normal(\"beta1\", mu=0, sigma=10)\n",
+    "    beta2 = pm.Normal(\"beta2\", mu=0, sigma=10)\n",
+    "\n",
+    "    mu = beta1 + beta2 * df[\"Annual_Family_Income\"]\n",
+    "    theta = pm.Deterministic(\"theta\", pm.math.sigmoid(mu))\n",
+    "    bd = pm.Deterministic(\"bd\", -beta1 / beta2)\n",
+    "\n",
+    "    yl = pm.Bernoulli(\"yl\", p=theta, observed=df[\"Own_House\"])\n",
     "\n",
     "    trace_0 = pm.sample(1000, cores=1, return_inferencedata=True)"
    ]
